@@ -23,9 +23,13 @@ import javax.swing.JPanel;
 import javax.swing.JTextPane;
 import javax.swing.text.*;
 
+import generic.theme.GThemeDefaults.Colors.Palette;
 import ghidra.app.merge.MergeConstants;
+import ghidra.docking.settings.Settings;
+import ghidra.docking.settings.SettingsDefinition;
 import ghidra.program.model.data.*;
 import ghidra.program.model.data.Enum;
+import ghidra.program.model.listing.Function;
 import ghidra.program.model.listing.FunctionSignature;
 import ghidra.util.StringUtilities;
 import ghidra.util.UniversalID;
@@ -37,8 +41,7 @@ import ghidra.util.UniversalID;
  */
 class DataTypePanel extends JPanel {
 
-	private static final long serialVersionUID = 1L;
-	public Color SOURCE_COLOR = new Color(0, 140, 0);
+	public Color SOURCE_COLOR = Palette.GREEN;
 	private DataType dataType;
 	private JTextPane textPane;
 	private StyledDocument doc;
@@ -76,6 +79,9 @@ class DataTypePanel extends JPanel {
 		else {
 			formatDataType(dataType);
 		}
+		if (dataType != null) {
+			formatDataTypeSettings(dataType);
+		}
 		textPane.setCaretPosition(0);
 	}
 
@@ -87,46 +93,46 @@ class DataTypePanel extends JPanel {
 
 		pathAttrSet = new SimpleAttributeSet();
 		pathAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		pathAttrSet.addAttribute(StyleConstants.FontSize, new Integer(11));
+		pathAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(11));
 		pathAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
 		pathAttrSet.addAttribute(StyleConstants.Foreground, MergeConstants.CONFLICT_COLOR);
 
 		nameAttrSet = new SimpleAttributeSet();
 		nameAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		nameAttrSet.addAttribute(StyleConstants.FontSize, new Integer(11));
+		nameAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(11));
 		nameAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
 
 		sourceAttrSet = new SimpleAttributeSet();
 		sourceAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		sourceAttrSet.addAttribute(StyleConstants.FontSize, new Integer(11));
+		sourceAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(11));
 		sourceAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
 		sourceAttrSet.addAttribute(StyleConstants.Foreground, SOURCE_COLOR);
 
 		offsetAttrSet = new SimpleAttributeSet();
 		offsetAttrSet.addAttribute(StyleConstants.FontFamily, "Monospaced");
-		offsetAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
-		offsetAttrSet.addAttribute(StyleConstants.Foreground, Color.BLACK);
+		offsetAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
+		offsetAttrSet.addAttribute(StyleConstants.Foreground, Palette.BLACK);
 
 		contentAttrSet = new SimpleAttributeSet();
 		contentAttrSet.addAttribute(StyleConstants.FontFamily, "Monospaced");
-		contentAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
-		contentAttrSet.addAttribute(StyleConstants.Foreground, Color.BLUE);
+		contentAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
+		contentAttrSet.addAttribute(StyleConstants.Foreground, Palette.BLUE);
 
 		fieldNameAttrSet = new SimpleAttributeSet();
 		fieldNameAttrSet.addAttribute(StyleConstants.FontFamily, "Monospaced");
-		fieldNameAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
-		fieldNameAttrSet.addAttribute(StyleConstants.Foreground, new Color(204, 0, 204));
+		fieldNameAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
+		fieldNameAttrSet.addAttribute(StyleConstants.Foreground, Palette.MAGENTA);
 
 		commentAttrSet = new SimpleAttributeSet();
 		commentAttrSet.addAttribute(StyleConstants.FontFamily, "Monospaced");
-		commentAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
-		commentAttrSet.addAttribute(StyleConstants.Foreground, new Color(0, 204, 51));
+		commentAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
+		commentAttrSet.addAttribute(StyleConstants.Foreground, Palette.LIME);
 
 		deletedAttrSet = new SimpleAttributeSet();
 		deletedAttrSet.addAttribute(StyleConstants.FontFamily, "Tahoma");
-		deletedAttrSet.addAttribute(StyleConstants.FontSize, new Integer(12));
+		deletedAttrSet.addAttribute(StyleConstants.FontSize, Integer.valueOf(12));
 		deletedAttrSet.addAttribute(StyleConstants.Bold, Boolean.TRUE);
-		deletedAttrSet.addAttribute(StyleConstants.Foreground, Color.RED);
+		deletedAttrSet.addAttribute(StyleConstants.Foreground, Palette.RED);
 
 		setDataType(dataType);
 	}
@@ -149,28 +155,8 @@ class DataTypePanel extends JPanel {
 	}
 
 	private void formatAlignment(Composite composite) {
-		StringBuffer alignmentBuffer = new StringBuffer();
-		if (!composite.isInternallyAligned()) {
-			alignmentBuffer.append("Unaligned");
-		}
-		else if (composite.isDefaultAligned()) {
-			alignmentBuffer.append("Aligned");
-		}
-		else if (composite.isMachineAligned()) {
-			alignmentBuffer.append("Machine aligned");
-		}
-		else {
-			long alignment = composite.getMinimumAlignment();
-			alignmentBuffer.append("align(" + alignment + ")");
-		}
-		if (composite.isInternallyAligned()) {
-			long packingValue = composite.getPackingValue();
-			if (packingValue != Composite.NOT_PACKING) {
-				alignmentBuffer.append(" pack(" + packingValue + ")");
-			}
-		}
-
-		insertString(alignmentBuffer.toString() + "\n\n", sourceAttrSet);
+		String str = CompositeInternal.getAlignmentAndPackingString(composite);
+		insertString(str + "\n\n", sourceAttrSet);
 	}
 
 	private void insertAlignment(Composite composite) {
@@ -198,11 +184,8 @@ class DataTypePanel extends JPanel {
 		DataType dt = dtc.getDataType();
 		StringBuilder buffer = new StringBuilder();
 		buffer.append(dt.getName());
-		if (dtc.isFlexibleArrayComponent()) {
-			buffer.append("[0]");
-		}
-		else if (dt instanceof BitFieldDataType &&
-			!((Composite) dtc.getParent()).isInternallyAligned()) {
+		if (dt instanceof BitFieldDataType &&
+			!((Composite) dtc.getParent()).isPackingEnabled()) {
 			BitFieldDataType bfDt = (BitFieldDataType) dt;
 			buffer.append("(");
 			buffer.append(Integer.toString(bfDt.getBitOffset()));
@@ -224,14 +207,9 @@ class DataTypePanel extends JPanel {
 		offsetWidth += 2; // factor in 0x prefix
 		String offsetStr = "";
 		if (offsetWidth > 0) {
-			if (!dtc.isFlexibleArrayComponent()) {
-				offsetStr = "0x" + Integer.toHexString(dtc.getOffset());
-				offsetStr = StringUtilities.pad(offsetStr, ' ', offsetWidth - offsetStr.length());
-				offsetStr += ": ";
-			}
-			else {
-				offsetStr = StringUtilities.pad(offsetStr, ' ', offsetWidth + 2);
-			}
+			offsetStr = "0x" + Integer.toHexString(dtc.getOffset());
+			offsetStr = StringUtilities.pad(offsetStr, ' ', offsetWidth - offsetStr.length());
+			offsetStr += ": ";
 			insertString("  " + offsetStr + "  ", offsetAttrSet);
 		}
 		fieldName = pad(fieldName, fieldNameWidth);
@@ -253,34 +231,49 @@ class DataTypePanel extends JPanel {
 		boolean showComponentOffset = false;
 
 		DataTypeComponent[] components = comp.getDefinedComponents();
-		DataTypeComponent flexDtc = null;
 		if (comp instanceof Structure) {
-			showComponentOffset = !comp.isInternallyAligned();
-			flexDtc = ((Structure) comp).getFlexibleArrayComponent();
+			showComponentOffset = !comp.isPackingEnabled();
 		}
 
 		int offsetLength = showComponentOffset ? Integer.toHexString(comp.getLength()).length() : 0;
 		int maxDtNameLength = 10;
 		int maxFieldNameLength = 1;
-		for (int i = 0; i < components.length; i++) {
-			maxDtNameLength = max(getDataTypeName(components[i]), maxDtNameLength);
-			maxFieldNameLength = max(components[i].getFieldName(), maxFieldNameLength);
-		}
-		if (flexDtc != null) {
-			maxDtNameLength = max(getDataTypeName(flexDtc), maxDtNameLength);
-			maxFieldNameLength = max(flexDtc.getFieldName(), maxFieldNameLength);
+		for (DataTypeComponent component : components) {
+			maxDtNameLength = max(getDataTypeName(component), maxDtNameLength);
+			maxFieldNameLength = max(component.getFieldName(), maxFieldNameLength);
 		}
 
-		for (int i = 0; i < components.length; i++) {
-			renderComponent(components[i], maxDtNameLength, maxFieldNameLength, offsetLength);
-		}
-		if (flexDtc != null) {
-			renderComponent(flexDtc, maxDtNameLength, maxFieldNameLength, offsetLength);
+		for (DataTypeComponent component : components) {
+			renderComponent(component, maxDtNameLength, maxFieldNameLength, offsetLength);
 		}
 
 		insertString("}\n\n", contentAttrSet);
 		insertAlignment(comp);
 		insertLength(comp);
+	}
+
+	private class EnumEntry implements Comparable<EnumEntry> {
+
+		private final String name;
+		private final long value;
+		private final String comment;
+
+		EnumEntry(String name, long value, String comment) {
+			this.name = name;
+			this.value = value;
+			this.comment = comment;
+
+		}
+
+		@Override
+		public int compareTo(EnumEntry o) {
+			int c = Long.compare(value, o.value);
+			if (c == 0) {
+				c = name.compareTo(o.name);
+			}
+			return c;
+		}
+
 	}
 
 	private void formatEnumText(Enum enuum) {
@@ -291,26 +284,39 @@ class DataTypePanel extends JPanel {
 
 		StringBuffer sb = new StringBuffer();
 
-		String[] names = enuum.getNames();
-		int maxLength = 0;
-		for (int i = 0; i < names.length; i++) {
-			if (names[i].length() > maxLength) {
-				maxLength = names[i].length();
-			}
-		}
-		long[] values = enuum.getValues();
-		Arrays.sort(values);
+		int maxNameLength = 0;
+		int maxValueLength = 0;
 
-		for (int i = 0; i < values.length; i++) {
-			String name = enuum.getName(values[i]);
-			name = pad(name, maxLength);
-			sb.append("    " + name + " = 0x" + Long.toHexString(values[i]) + " ");
-			if (i < values.length - 1) {
-				sb.append("\n");
-			}
+		String[] names = enuum.getNames();
+		EnumEntry[] entries = new EnumEntry[names.length];
+		for (int i = 0; i < names.length; i++) {
+			String name = names[i];
+			EnumEntry entry = new EnumEntry(name, enuum.getValue(name), enuum.getComment(name));
+			entries[i] = entry;
+			maxNameLength = Math.max(maxNameLength, name.length());
+			String valStr = Long.toHexString(entry.value);
+			maxValueLength = Math.max(maxValueLength, valStr.length());
 		}
-		sb.append("\n }\n");
+		Arrays.sort(entries);
+
+		for (EnumEntry entry : entries) {
+			renderEnumEntry(entry, maxNameLength, maxValueLength);
+		}
+		sb.append("}\n");
 		insertString(sb.toString(), contentAttrSet);
+	}
+
+	private void renderEnumEntry(EnumEntry entry, int maxNameLength, int maxValueLength) {
+		String name = entry.name;
+		name = pad(name, maxNameLength);
+		String valStr = Long.toHexString(entry.value);
+		valStr = pad(valStr, maxValueLength);
+		insertString("    " + name, fieldNameAttrSet);
+		insertString(" = 0x" + valStr, contentAttrSet);
+		if (entry.comment != null) {
+			insertString("   " + entry.comment, commentAttrSet);
+		}
+		insertString("\n", contentAttrSet);
 	}
 
 	private void formatTypeDefText(TypeDef td) {
@@ -318,7 +324,23 @@ class DataTypePanel extends JPanel {
 		formatPath(td);
 		insertString(td.getDisplayName(), nameAttrSet);
 		insertString("\n", contentAttrSet);
-		insertString("     TypeDef on " + td.getDataType().getDisplayName(), contentAttrSet);
+		insertString("  TypeDef on " + td.getDataType().getDisplayName(), contentAttrSet);
+	}
+
+	private void formatDataTypeSettings(DataType dt) {
+		Settings settings = dt.getDefaultSettings();
+		SettingsDefinition[] defs =
+			SettingsDefinition.filterSettingsDefinitions(dt.getSettingsDefinitions(), def -> {
+				return (def instanceof TypeDefSettingsDefinition) && def.hasValue(settings);
+			});
+		if (defs.length == 0) {
+			return;
+		}
+		insertString("\n\nSettings\n", sourceAttrSet);
+		for (SettingsDefinition def : defs) {
+			insertString("  " + def.getName() + ": " + def.getValueString(settings) + "\n",
+				contentAttrSet);
+		}
 	}
 
 	private void formatFunctionDef(FunctionDefinition fd) {
@@ -327,7 +349,14 @@ class DataTypePanel extends JPanel {
 		ParameterDefinition[] vars = fd.getArguments();
 
 		DataType returnType = fd.getReturnType();
+		if (fd.hasNoReturn()) {
+			insertString(FunctionSignature.NORETURN_DISPLAY_STRING + "  ", contentAttrSet);
+		}
 		insertString(returnType.getDisplayName(), contentAttrSet);
+		String callingConventionName = fd.getCallingConventionName();
+		if (!Function.UNKNOWN_CALLING_CONVENTION_STRING.equals(callingConventionName)) {
+			insertString(callingConventionName + "  ", contentAttrSet);
+		}
 		insertString("  " + fd.getDisplayName(), nameAttrSet);
 		insertString(" (", contentAttrSet);
 		boolean hasVarArgs = fd.hasVarArgs();
@@ -336,8 +365,8 @@ class DataTypePanel extends JPanel {
 			return;
 		}
 		int maxLength = 0;
-		for (int i = 0; i < vars.length; i++) {
-			String typeName = vars[i].getDataType().getDisplayName();
+		for (ParameterDefinition var : vars) {
+			String typeName = var.getDataType().getDisplayName();
 			if (typeName.length() > maxLength) {
 				maxLength = typeName.length();
 			}
