@@ -57,7 +57,6 @@ public class PropertyListMergeManager implements MergeResolver {
 	private int currentConflict;
 	private int totalConflictCount;
 	private ProgramMultiUserMergeManager mergeManager;
-	private int progressIndex;
 	private int propertyListChoice = ASK_USER;
 
 	/**
@@ -73,7 +72,8 @@ public class PropertyListMergeManager implements MergeResolver {
 	 * resultProgram and latestProgram start out the same
 	 */
 	public PropertyListMergeManager(ProgramMultiUserMergeManager mergeManager,
-			Program resultProgram, Program myProgram, Program originalProgram, Program latestProgram) {
+			Program resultProgram, Program myProgram, Program originalProgram,
+			Program latestProgram) {
 		this.mergeManager = mergeManager;
 		this.resultProgram = resultProgram;
 		this.myProgram = myProgram;
@@ -143,7 +143,8 @@ public class PropertyListMergeManager implements MergeResolver {
 				currentMonitor.setProgress(i);
 				String myName = myNames.get(i);
 				int progress = (int) (((float) (i / myNamesCount)) * 100);
-				mergeManager.updateProgress(progress, "Merging property list for " + myName + "...");
+				mergeManager.updateProgress(progress,
+					"Merging property list for " + myName + "...");
 				boolean isInLatest = latestNames.contains(myName);
 				boolean isInOrig = origNames.contains(myName);
 				if (!isInLatest && !isInOrig) {
@@ -157,7 +158,7 @@ public class PropertyListMergeManager implements MergeResolver {
 				}
 			}
 			mergeManager.updateProgress(100);
-			currentMonitor.initialize(myNamesCount);
+
 			try {
 				processConflicts();
 				commit = true;
@@ -193,7 +194,6 @@ public class PropertyListMergeManager implements MergeResolver {
 				return;
 			}
 			addProperty(list, resultList, optionName);
-			currentMonitor.setProgress(++progressIndex);
 		}
 
 	}
@@ -251,7 +251,6 @@ public class PropertyListMergeManager implements MergeResolver {
 
 					if (latestValue.equals(origValue)) {
 						latestList.removeOption(propertyName);
-						currentMonitor.setProgress(++progressIndex);
 					}
 					else {
 						String listName = latestList.getName();
@@ -275,25 +274,23 @@ public class PropertyListMergeManager implements MergeResolver {
 		Object resultValue = getValue(resultList, propertyName);
 		Object origValue = getValue(origList, propertyName);
 
-		if (!SystemUtilities.isEqual(resultValue, myValue)) {
-			if (propertyName.equals(Program.ANALYZED) && (myValue instanceof Boolean)) {
-				// If latest or my version sets "Analyzed" to true, then it should result in true.
-				setValue(resultList, propertyName, myList.getType(propertyName), Boolean.TRUE);
-				currentMonitor.setProgress(++progressIndex);
-				return;
-			}
-			if (SystemUtilities.isEqual(resultValue, origValue)) {
-				setValue(resultList, propertyName, myList.getType(propertyName), myValue);
-				currentMonitor.setProgress(++progressIndex);
-			}
-			else {
-				String listName = resultList.getName();
-				ArrayList<ConflictInfo> mapList = getConflictList(listName);
-				mapList.add(new ConflictInfo(listName, propertyName,
-					resultList.getType(propertyName), myList.getType(propertyName),
-					origList.getType(propertyName), resultValue, myValue, origValue));
-				++totalConflictCount;
-			}
+		if (SystemUtilities.isEqual(origValue, myValue) ||
+			SystemUtilities.isEqual(resultValue, myValue)) {
+			// value was not modified in my program or it was changed the same as in latest
+			return;
+		}
+		if (SystemUtilities.isEqual(resultValue, origValue)) {
+			// no change by latest - use my value
+			setValue(resultList, propertyName, myList.getType(propertyName), myValue);
+		}
+		else {
+			// my change conflicts with latest change
+			String listName = resultList.getName();
+			ArrayList<ConflictInfo> mapList = getConflictList(listName);
+			mapList.add(new ConflictInfo(listName, propertyName,
+				resultList.getType(propertyName), myList.getType(propertyName),
+				origList.getType(propertyName), resultValue, myValue, origValue));
+			++totalConflictCount;
 		}
 	}
 
@@ -322,7 +319,6 @@ public class PropertyListMergeManager implements MergeResolver {
 
 		if (!myValue.equals(origValue)) {
 			setValue(resultList, propertyName, myList.getType(propertyName), myValue);
-			currentMonitor.setProgress(++progressIndex);
 		}
 
 	}
@@ -365,13 +361,13 @@ public class PropertyListMergeManager implements MergeResolver {
 				return options.getBoolean(propertyName, false) ? Boolean.TRUE : Boolean.FALSE;
 
 			case DOUBLE_TYPE:
-				return new Double(options.getDouble(propertyName, 0d));
+				return Double.valueOf(options.getDouble(propertyName, 0d));
 
 			case INT_TYPE:
-				return new Integer(options.getInt(propertyName, 0));
+				return Integer.valueOf(options.getInt(propertyName, 0));
 
 			case LONG_TYPE:
-				return new Long(options.getLong(propertyName, 0L));
+				return Long.valueOf(options.getLong(propertyName, 0L));
 
 			case NO_TYPE:
 				return null;
@@ -412,7 +408,7 @@ public class PropertyListMergeManager implements MergeResolver {
 			String currentListName) throws CancelledException {
 
 		for (int i = 0; i < conflictList.size(); i++) {
-			currentMonitor.setProgress(++progressIndex);
+			currentMonitor.setProgress(i);
 
 			ConflictInfo info = conflictList.get(i);
 
