@@ -15,14 +15,15 @@
  */
 package ghidra.app.plugin.core.stackeditor;
 
-import java.util.Collections;
-import java.util.Comparator;
+import java.util.*;
+
+import javax.help.UnsupportedOperationException;
 
 import ghidra.program.model.data.*;
 import ghidra.util.exception.AssertException;
 
 /**
- * BiDirectionDataType is a special structure data type that allows both positive and negative 
+ * BiDirectionDataType is a special structure data type that allows both positive and negative
  * offset values.
  */
 public abstract class BiDirectionDataType extends StructureDataType
@@ -54,11 +55,59 @@ public abstract class BiDirectionDataType extends StructureDataType
 		this.splitOffset = splitOffset;
 	}
 
+	@Override
+	protected DataType validateDataType(DataType dataType) {
+		if (DataTypeComponent.usesZeroLengthComponent(dataType)) {
+			throw new IllegalArgumentException(
+				"Zero-length datatype not permitted: " + dataType.getName());
+		}
+		if (dataType instanceof BitFieldDataType) {
+			throw new IllegalArgumentException("Bitfield not permitted: " + dataType.getName());
+		}
+		return super.validateDataType(dataType);
+	}
+
+	@Override
+	public int getAlignment() {
+		throw new UnsupportedOperationException(
+			"BiDirectionDataType.getAlignment() not implemented.");
+	}
+
+	@Override
+	public boolean repack(boolean notify) {
+		throw new AssertException();
+	}
+
+	@Override
+	public void setToDefaultAligned() {
+		// ignore
+	}
+
+	@Override
+	public void setToMachineAligned() {
+		// ignore
+	}
+
+	@Override
+	public void setPackingEnabled(boolean aligned) {
+		// ignore
+	}
+
+	@Override
+	public void setExplicitPackingValue(int packingValue) {
+		// ignore
+	}
+
+	@Override
+	public void setExplicitMinimumAlignment(int minimumAlignment) {
+		// ignore
+	}
+
 	protected DataTypeComponent getDefinedComponentAt(int offset) {
 		if (offset < splitOffset - negativeLength || offset >= splitOffset + positiveLength) {
 			return null;
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -70,7 +119,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 		if (offset < splitOffset - negativeLength || offset >= splitOffset + positiveLength) {
 			return null;
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -109,19 +158,14 @@ public abstract class BiDirectionDataType extends StructureDataType
 	}
 
 	@Override
-	public int getLength() {
-		return structLength;
-	}
-
-	@Override
 	public void delete(int index) {
 		if (index < 0 || index >= numComponents) {
-			throw new ArrayIndexOutOfBoundsException(index);
+			throw new IndexOutOfBoundsException(index);
 		}
 		DataTypeComponent comp = getComponent(index);
 		int offset = comp.getOffset();
 		int length = comp.getLength();
-		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
+		int idx = Collections.binarySearch(components, index, ordinalComparator);
 		if (idx >= 0) {
 			DataTypeComponent dtc = components.remove(idx);
 			dtc.getDataType().removeParent(this);
@@ -137,7 +181,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 	}
 
 	@Override
-	public void delete(int[] ordinals) {
+	public void delete(Set<Integer> ordinals) {
 		for (int ordinal : ordinals) {
 			delete(ordinal);
 		}
@@ -173,6 +217,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 			}
 		}
 		structLength += deltaLength;
+//		nonpackedAlignedStructLength = -1;
 	}
 
 	/*
@@ -198,9 +243,9 @@ public abstract class BiDirectionDataType extends StructureDataType
 
 	protected DataTypeComponent getDefinedComponent(int ordinal) {
 		if (ordinal < 0 || ordinal >= numComponents) {
-			throw new ArrayIndexOutOfBoundsException(ordinal);
+			throw new IndexOutOfBoundsException(ordinal);
 		}
-		int idx = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int idx = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (idx >= 0) {
 			return components.get(idx);
 		}
@@ -208,11 +253,11 @@ public abstract class BiDirectionDataType extends StructureDataType
 	}
 
 	@Override
-	public DataTypeComponent getComponent(int ordinal) {
+	public DataTypeComponentImpl getComponent(int ordinal) {
 		if (ordinal < 0 || ordinal >= numComponents) {
-			throw new ArrayIndexOutOfBoundsException(ordinal);
+			throw new IndexOutOfBoundsException(ordinal);
 		}
-		int idx = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int idx = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (idx >= 0) {
 			return components.get(idx);
 		}
@@ -255,17 +300,19 @@ public abstract class BiDirectionDataType extends StructureDataType
 			numComponents += deltaLength;
 			positiveLength += deltaLength;
 			structLength += deltaLength;
+//			nonpackedAlignedStructLength = -1;
 		}
 		if (nextOffset < splitOffset - negativeLength) {
 			int deltaLength = splitOffset - nextOffset - negativeLength;
 			numComponents += deltaLength;
 			negativeLength += deltaLength;
 			structLength += deltaLength;
+//			nonpackedAlignedStructLength = -1;
 		}
 		checkAncestry(dataType);
 		dataType = dataType.clone(getDataTypeManager());
 
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 
 		int additionalShift = 0;
 		if (index >= 0) {
@@ -319,6 +366,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 		numComponents++;
 		positiveLength += length;
 		structLength += length;
+//		nonpackedAlignedStructLength = -1;
 		notifySizeChanged();
 		return dtc;
 	}
@@ -341,17 +389,18 @@ public abstract class BiDirectionDataType extends StructureDataType
 		numComponents++;
 		negativeLength += length;
 		structLength += length;
+//		nonpackedAlignedStructLength = -1;
 		notifySizeChanged();
 		return dtc;
 	}
 
 	/**
-	 * Increases the size of the bidirectional data type
-	 * If amount is positive then the positive offset side will grow by the 
-	 * indicated amount. If amount is negative, the data type grows on the 
-	 * negative offsets side.
-	 * @param amount Positive value indicates number of bytes to add to positive side.
-	 * Negative value indicates number of bytes to add to negative side.
+	 * Increases the size of the bidirectional data type If amount is positive then the positive
+	 * offset side will grow by the indicated amount. If amount is negative, the data type grows on
+	 * the negative offsets side.
+	 * 
+	 * @param amount Positive value indicates number of bytes to add to positive side. Negative
+	 *            value indicates number of bytes to add to negative side.
 	 */
 	@Override
 	public void growStructure(int amount) {
@@ -367,39 +416,14 @@ public abstract class BiDirectionDataType extends StructureDataType
 		}
 		numComponents += absAmount;
 		structLength += absAmount;
+//		nonpackedAlignedStructLength = -1;
 		notifySizeChanged();
 	}
 
 	@Override
 	public DataTypeComponent insert(int index, DataType dataType, int length, String newName,
 			String comment) {
-		throw new AssertException("BiDirectionDataType.insert() not implemented.");
-//		if (index < 0 || index > numComponents) {
-//			throw new ArrayIndexOutOfBoundsException(index);
-//		}
-//		if (index == numComponents) {
-//			return add(dataType, length, newName, comment);
-//		}
-//		validateDataType(dataType);
-//
-//		dataType = resolve(dataType);
-//		checkAncestry(dataType);
-//		
-//		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
-//		if (idx < 0) {
-//			idx = -idx -1;
-//		}
-//		if (dataType == DataType.DEFAULT) {
-//			shiftOffsets(idx, 1, 1);
-//			return getComponent(index);
-//		}
-//		int offset = ((DataTypeComponent)getComponent(index)).getOffset();
-//		DataTypeComponent dtc = new DataTypeComponentImpl(dataType,this, length,index,
-//														  offset, newName, comment);
-//		shiftOffsets(idx, 1, dtc.getLength());
-//		components.add(idx, dtc);											 
-//		sizeChanged();
-//		return dtc;
+		throw new UnsupportedOperationException("BiDirectionDataType.insert() not implemented.");
 	}
 
 	protected void insertAtOffset(int offset, int numBytes) {
@@ -424,7 +448,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 				" within a defined component in " + getDisplayName() + ".");
 		}
 		else {
-			definedIndex = Collections.binarySearch(components, new Integer(dtc.getOrdinal()),
+			definedIndex = Collections.binarySearch(components, Integer.valueOf(dtc.getOrdinal()),
 				ordinalComparator);
 			if (definedIndex < 0) {
 				definedIndex = -definedIndex - 1;
@@ -441,6 +465,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 		}
 		numComponents += numBytes;
 		structLength += numBytes;
+//		nonpackedAlignedStructLength = -1;
 		notifySizeChanged();
 	}
 
@@ -450,7 +475,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 			throw new IllegalArgumentException(
 				"Offset " + offset + " is not in " + getDisplayName() + ".");
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 
 		int length = 1;
 		if (index < 0) {
@@ -463,6 +488,25 @@ public abstract class BiDirectionDataType extends StructureDataType
 		}
 		adjustOffsets(index, offset, -1, -length);
 		numComponents--;
+	}
+
+	@Override
+	public void clearAtOffset(int offset) {
+		if (offset < splitOffset - negativeLength || offset >= splitOffset + positiveLength) {
+			throw new IllegalArgumentException(
+				"Offset " + offset + " is not in " + getDisplayName() + ".");
+		}
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
+		if (index >= 0) {
+			DataTypeComponent dtc = components.remove(index);
+			dtc.getDataType().removeParent(this);
+			int len = dtc.getLength();
+			if (len > 1) {
+				int deltaLength = len - 1;
+				shiftOffsets(index, deltaLength, 0);
+				numComponents += deltaLength;
+			}
+		}
 	}
 
 	@Override
@@ -479,7 +523,7 @@ public abstract class BiDirectionDataType extends StructureDataType
 			if ((splitOffset != biDir.getSplitOffset()) ||
 				(negativeLength != biDir.getNegativeLength()) ||
 				(positiveLength != biDir.getPositiveLength()) ||
-				(structLength != biDir.getLength())) {
+				(getLength() != biDir.getLength())) {
 				return false;
 			}
 			DataTypeComponent[] myComps = getDefinedComponents();
@@ -499,171 +543,51 @@ public abstract class BiDirectionDataType extends StructureDataType
 
 	@Override
 	public void dataTypeSizeChanged(DataType dt) {
-		throw new AssertException("BiDirectionDataType.dataTypeSizeChanged() not implemented.");
-//		int n = components.size();
-//		boolean didChange = false;
-//		for(int i=0;i<n;i++) {
-//			DataTypeComponentImpl dtc = (DataTypeComponentImpl)components.get(i);
-//			if (dtc.getDataType() == dt) {
-//				int dtLen = dt.getLength();
-//				int dtcLen = dtc.getLength();
-//				if (dtLen < dtcLen) {
-//					dtc.setLength(dtLen);
-//					shiftOffsets(i+1, dtcLen-dtLen, 0);
-//					didChange = true;
-//				}
-//				else if (dtLen > dtcLen) {
-//					int consumed = consumeBytesAfter(i, dtLen-dtcLen);
-//					if (consumed > 0) {
-//						shiftOffsets(i+1, 0-consumed, 0);
-//						didChange = true;
-//					}
-//				}
-//			}
-//		}
-//		if (didChange & dtMgr != null) {
-//			dtMgr.dataTypeChanged(this);
-//		}
+		// ignore
 	}
 
-	/**
-	 * 
-	 * @param index the index of the defined component that is consuming the bytes.
-	 * @param numBytes the number of undefined bytes to consume
-	 * @return the number of bytes actually consumed
-	 */
-//	private int consumeBytesAfter(int index, int numBytes) {
-//	throw new AssertException("BiDirectionDataType.consumeBytesAfter() not implemented.");
-//		DataTypeComponentImpl thisDtc = (DataTypeComponentImpl)components.get(index);
-//		int thisLen = thisDtc.getLength();
-//		int nextOffset = thisDtc.getOffset()+thisLen;
-//		int available = structLength-nextOffset;
-//		if (index+1 < components.size()) {
-//			DataTypeComponent nextDtc = (DataTypeComponent)components.get(index+1);
-//			available = nextDtc.getOffset() - nextOffset;
-//		}
-//		else {
-//			available = structLength-nextOffset;
-//		}
-//		if (numBytes <= available) {
-//			thisDtc.setLength(thisLen + numBytes);
-//			return numBytes;	
-//		}
-//		else {
-//			thisDtc.setLength(thisLen + available);
-//			return available;	
-//		}
-//	}
-
-//	private boolean hasRoom(int index, int offset, int length) {
-//		if (offset+length > this.positiveLength) {
-//			return false;
-//		}
-//		if (index+1 < components.size()) {
-//			DataTypeComponent nextDtc = (DataTypeComponent)components.get(index+1);
-//			return offset+length <= nextDtc.getOffset();
-//		}
-//		return true;	
-//	}
+	@Override
+	public void dataTypeAlignmentChanged(DataType dt) {
+		// ignore
+	}
 
 	@Override
-	public abstract DataType clone(DataTypeManager dtm);
+	public abstract BiDirectionDataType clone(DataTypeManager dtm);
 
 	@Override
-	public void clearComponent(int index) {
-		if (index < 0 || index >= numComponents) {
-			throw new ArrayIndexOutOfBoundsException(index);
+	public void clearComponent(int ordinal) {
+		if (ordinal < 0 || ordinal >= numComponents) {
+			throw new IndexOutOfBoundsException(ordinal);
 		}
-		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
-		if (idx >= 0) {
-			DataTypeComponent dtc = components.remove(idx);
+		int index =
+			Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
+		if (index >= 0) {
+			DataTypeComponent dtc = components.remove(index);
 			dtc.getDataType().removeParent(this);
 			int len = dtc.getLength();
-			int deltaLength = len - 1;
-//			int offset = dtc.getOffset();
 			if (len > 1) {
-				shiftOffsets(idx, deltaLength, 0);
+				int deltaLength = len - 1;
+				shiftOffsets(index, deltaLength, 0);
 				numComponents += deltaLength;
 			}
 		}
 	}
 
 	public void replaceWith(Structure struct) {
-		throw new AssertException("BiDirectionDataType.replaceWith() not implemented.");
-//		int oldLength = structLength;
-//		doReplaceWith(struct);
-//		if (oldLength != structLength) {
-//			sizeChanged();
-//		}
-//		else if (dtMgr != null) {
-//			dtMgr.dataTypeChanged(this);
-//		}
+		throw new UnsupportedOperationException(
+			"BiDirectionDataType.replaceWith() not implemented.");
 	}
-
-//	private void doReplaceWith(Structure struct) {
-//		throw new AssertException("BiDirectionDataType.doReplaceWith() not implemented.");
-//		components.clear();
-//		structLength = struct.getLength();
-//		numComponents = structLength;
-//
-//		DataTypeComponent[] components = struct.getDefinedComponents();
-//		for(int i=0;i<components.length;i++) {
-//			DataTypeComponent dtc = components[i];
-//			DataType dt = dtc.getDataType();
-//			validateDataType(dt);
-//			dt = resolve(dt);
-//			replaceAtOffset(dtc.getOffset(), dt, dtc.getLength(), 
-//							dtc.getFieldName(), dtc.getComment());
-//		}
-//	}
 
 	@Override
 	public void dataTypeDeleted(DataType dt) {
-		throw new AssertException("BiDirectionDataType.dataTypeDeleted() not implemented.");
-//		boolean didChange = false;
-//		int n = components.size();
-//		for(int i=n-1;i>=0;i--) {
-//			DataTypeComponentImpl dtc = (DataTypeComponentImpl)components.get(i);
-//			if (dtc.getDataType() == dt) {
-//				components.remove(i);
-//				shiftOffsets(i, dtc.getLength()-1, 0);
-//				didChange = true;	
-//			}
-//		}
-//		if (didChange && dtMgr != null) {
-//			dtMgr.dataTypeChanged(this);
-//		}
-
+		throw new UnsupportedOperationException(
+			"BiDirectionDataType.dataTypeDeleted() not implemented.");
 	}
 
 	@Override
 	public void dataTypeReplaced(DataType oldDt, DataType newDt) {
-		throw new AssertException("BiDirectionDataType.dataTypeReplaced() not implemented.");
-//		int n = components.size();
-//		boolean didChange = false;
-//		for(int i=0;i<n;i++) {
-//			DataTypeComponentImpl dtc = (DataTypeComponentImpl)components.get(i);
-//			if (dtc.getDataType() == oldDt) {
-//				int dtLen = oldDt.getLength();
-//				int dtcLen = dtc.getLength();
-//				dtc.setDataType(newDt);
-//				if (dtLen < dtcLen) {
-//					dtc.setLength(dtLen);
-//					shiftOffsets(i+1, dtcLen-dtLen, 0);
-//					didChange = true;
-//				}
-//				else if (dtLen > dtcLen) {
-//					int consumed = consumeBytesAfter(i, dtLen-dtcLen);
-//					if (consumed > 0) {
-//						shiftOffsets(i+1, 0-consumed, 0);
-//						didChange = true;
-//					}
-//				}
-//			}
-//		}
-//		if (didChange & dtMgr != null) {
-//			dtMgr.dataTypeChanged(this);
-//		}
+		throw new UnsupportedOperationException(
+			"BiDirectionDataType.dataTypeReplaced() not implemented.");
 	}
 
 	@Override
@@ -682,9 +606,9 @@ public abstract class BiDirectionDataType extends StructureDataType
 
 	@Override
 	public DataTypeComponent replace(int index, DataType dataType, int length, String newName,
-			String comment) throws ArrayIndexOutOfBoundsException, IllegalArgumentException {
+			String comment) throws IndexOutOfBoundsException, IllegalArgumentException {
 		if (index < 0 || index >= numComponents) {
-			throw new ArrayIndexOutOfBoundsException(index);
+			throw new IndexOutOfBoundsException(index);
 		}
 		validateDataType(dataType);
 		checkAncestry(dataType);
@@ -709,21 +633,20 @@ public abstract class BiDirectionDataType extends StructureDataType
 	}
 
 	/**
-	 * Replace the indicated component with a new component containing the 
-	 * specified data type.
+	 * Replace the indicated component with a new component containing the specified data type.
+	 * 
 	 * @param origDtc the original data type component in this structure.
 	 * @param dataType the data type of the new component
 	 * @param length the length of the new component
 	 * @param newName the field name of the new component
 	 * @param comment the comment for the new component
 	 * @return the new component or null if the new component couldn't fit.
-	 * @throws IllegalArgumentException if the dataType.getLength() is positive 
-	 * and does not match the given length parameter.
-	 * @throws IllegalArgumentException if the specified data type is not 
-	 * allowed to replace a component in this composite data type.
-	 * For example, suppose dt1 contains dt2. Therefore it is not valid
-	 * to replace a dt2 component with dt1 since this would cause a cyclic 
-	 * dependency.
+	 * @throws IllegalArgumentException if the dataType.getLength() is positive and does not match
+	 *             the given length parameter.
+	 * @throws IllegalArgumentException if the specified data type is not allowed to replace a
+	 *             component in this composite data type. For example, suppose dt1 contains dt2.
+	 *             Therefore it is not valid to replace a dt2 component with dt1 since this would
+	 *             cause a cyclic dependency.
 	 */
 	private DataTypeComponent replace(DataTypeComponent origDtc, DataType dataType, int length,
 			String newName, String comment) {
@@ -745,7 +668,8 @@ public abstract class BiDirectionDataType extends StructureDataType
 		DataTypeComponentImpl newDtc =
 			new DataTypeComponentImpl(dataType, this, length, ordinal, newOffset, newName, comment);
 		dataType.addParent(this);
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index =
+			Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index < 0) {
 			index = -index - 1;
 		}
