@@ -15,6 +15,9 @@
  */
 package ghidra.app.plugin.core.stackeditor;
 
+import java.util.Collections;
+import java.util.Iterator;
+
 import ghidra.docking.settings.Settings;
 import ghidra.program.model.data.*;
 import ghidra.program.model.listing.*;
@@ -22,13 +25,11 @@ import ghidra.program.model.mem.MemBuffer;
 import ghidra.program.model.pcode.Varnode;
 import ghidra.program.model.symbol.SymbolUtilities;
 import ghidra.util.InvalidNameException;
+import ghidra.util.SystemUtilities;
 import ghidra.util.exception.AssertException;
 import ghidra.util.exception.InvalidInputException;
 
-import java.util.Collections;
-import java.util.Iterator;
-
-/** 
+/**
  * StackFrameDataType provides an editable copy of a function stack frame.
  */
 public class StackFrameDataType extends BiDirectionDataType {
@@ -43,17 +44,20 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Constructor for an editable stack frame for use with the editor.
+	 * 
 	 * @param stack the function stack frame to be edited.
 	 */
 	public StackFrameDataType(StackFrame stack, DataTypeManager dtm) {
-		super((stack.getFunction() != null) ? stack.getFunction().getName()
-				: "StackWithoutFunction", 0, 0, stack.getParameterOffset(), dtm);
+		super(
+			(stack.getFunction() != null) ? stack.getFunction().getName() : "StackWithoutFunction",
+			0, 0, stack.getParameterOffset(), dtm);
 		this.stack = stack;
 		initialize();
 	}
 
 	/**
 	 * Constructor for an editable stack frame for use with the editor.
+	 * 
 	 * @param stack the function stack frame to be edited.
 	 */
 	public StackFrameDataType(StackFrameDataType stackDt, DataTypeManager dtm) {
@@ -64,11 +68,9 @@ public class StackFrameDataType extends BiDirectionDataType {
 		this.growsNegative = stackDt.growsNegative;
 		this.returnAddressOffset = stackDt.returnAddressOffset;
 		this.stack = stackDt.stack;
-		this.defaultSettings = stackDt.defaultSettings;
-		for (int i = 0; i < stackDt.components.size(); i++) {
-			DataTypeComponent dtc = stackDt.components.get(i);
-			replaceAtOffset(dtc.getOffset(), dtc.getDataType(), dtc.getLength(),
-				dtc.getFieldName(), dtc.getComment());
+		for (DataTypeComponentImpl dtc : stackDt.components) {
+			replaceAtOffset(dtc.getOffset(), dtc.getDataType(), dtc.getLength(), dtc.getFieldName(),
+				dtc.getComment());
 		}
 	}
 
@@ -132,6 +134,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 	/* (non-Javadoc)
 	 * @see ghidra.program.model.data.DataType#getRepresentation(ghidra.program.model.mem.MemBuffer, ghidra.util.settings.Settings, int)
 	 */
+	@Override
 	public String getRepresentation(MemBuffer buf, Settings settings, int length) {
 		return "";
 	}
@@ -145,7 +148,15 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 	@Override
-	public DataType clone(DataTypeManager dtm) {
+	public StackFrameDataType clone(DataTypeManager dtm) {
+		if (dtm == dataMgr) {
+			return this;
+		}
+		return new StackFrameDataType(this, dtm);
+	}
+
+	@Override
+	public DataType copy(DataTypeManager dtm) {
 		return new StackFrameDataType(this, dtm);
 	}
 
@@ -164,10 +175,10 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 	/**
-	 * If a stack variable is defined in the editor at the specified offset,
-	 * this retrieves the editor element containing that stack variable
-	 * <BR>Note: if a stack variable isn't defined at the indicated offset
-	 * then null is returned.
+	 * If a stack variable is defined in the editor at the specified offset, this retrieves the
+	 * editor element containing that stack variable <BR>
+	 * Note: if a stack variable isn't defined at the indicated offset then null is returned.
+	 * 
 	 * @param offset the offset
 	 * @return the stack editor's element at the offset. Otherwise, null.
 	 */
@@ -175,7 +186,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (offset < getMinOffset() || offset > getMaxOffset()) {
 			throw new ArrayIndexOutOfBoundsException(offset);
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -183,18 +194,18 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 	/**
-	 * If a stack variable is defined in the editor at the specified ordinal,
-	 * this retrieves the editor element containing that stack variable.
-	 * <BR>Note: if a stack variable isn't defined for the indicated ordinal
-	 * then null is returned.
-	 * @param ordinal the ordinal 
+	 * If a stack variable is defined in the editor at the specified ordinal, this retrieves the
+	 * editor element containing that stack variable. <BR>
+	 * Note: if a stack variable isn't defined for the indicated ordinal then null is returned.
+	 * 
+	 * @param ordinal the ordinal
 	 * @return the stack editor's element at the ordinal. Otherwise, null.
 	 */
 	public DataTypeComponent getDefinedComponentAtOrdinal(int ordinal) {
 		if (ordinal < 0 || ordinal >= getNumComponents()) {
 			throw new ArrayIndexOutOfBoundsException(ordinal);
 		}
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -212,7 +223,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 	 * @see ghidra.program.model.listing.StackFrame#getFrameSize()
 	 */
 	public int getFrameSize() {
-		return structLength;
+		return getLength();
 	}
 
 	/* (non-Javadoc)
@@ -257,8 +268,9 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 	private boolean adjustStackFrameSize(int newSize, int oldSize, boolean isNegative) {
-		if (newSize < 0)
+		if (newSize < 0) {
 			return false;
+		}
 
 		int delta = newSize - oldSize;
 		if (delta == 0) {
@@ -286,7 +298,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 //	private int getFirstParameterLength() {
-//		Object offsetKey = new Integer(0);
+//		Object offsetKey = Integer.valueOf(0);
 //		DataTypeComponent[] variables = getDefinedComponents();
 //		int loc = Arrays.binarySearch(variables, offsetKey, offsetComparator);
 //		loc = (loc < 0 ? -1 - loc : loc);
@@ -303,7 +315,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 //	}
 
 	void shiftParamOffset(int offset, int deltaOrdinal, int deltaLength) {
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index < 0) {
 			index = -index - 1;
 		}
@@ -315,16 +327,17 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Undefines any defined stack variables in the indicated offset range.
+	 * 
 	 * @param minOffset the range's minimum offset on the stack frame
 	 * @param maxOffset the range's maximum offset on the stack frame
 	 */
 	@SuppressWarnings("unused")
 	private void clearRange(int minOffset, int maxOffset) {
-		int first = Collections.binarySearch(components, new Integer(minOffset), offsetComparator);
+		int first = Collections.binarySearch(components, Integer.valueOf(minOffset), offsetComparator);
 		if (first < 0) {
 			first = -first - 1;
 		}
-		int last = Collections.binarySearch(components, new Integer(maxOffset), offsetComparator);
+		int last = Collections.binarySearch(components, Integer.valueOf(maxOffset), offsetComparator);
 		if (last < 0) {
 			last = -last - 2;
 		}
@@ -335,6 +348,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Deletes the indicated range of bytes from this stack frame data type.
+	 * 
 	 * @param minOffset the range's minimum offset on the stack frame
 	 * @param maxOffset the range's maximum offset on the stack frame
 	 */
@@ -365,7 +379,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (offset < getMinOffset() || offset > getMaxOffset()) {
 			throw new ArrayIndexOutOfBoundsException(offset);
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			clearComponent(index);
 		}
@@ -379,9 +393,8 @@ public class StackFrameDataType extends BiDirectionDataType {
 			String fieldName = dtc.getFieldName();
 			int offset = dtc.getOffset();
 			try {
-				vars[i] =
-					new LocalVariableImpl(fieldName, dtc.getDataType(), offset,
-						function.getProgram());
+				vars[i] = new LocalVariableImpl(fieldName, dtc.getDataType(), offset,
+					function.getProgram());
 			}
 			catch (InvalidInputException e) {
 				try {
@@ -402,24 +415,25 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Sets the name of the component at the specified ordinal.
+	 * 
 	 * @param ordinal the ordinal
 	 * @param name the new name. Null indicates the default name.
+	 * @return true if name change was successful, else false
 	 */
 	public boolean setName(int ordinal, String name) {
 		validateName(ordinal, name);
 		DataTypeComponent comp = getComponent(ordinal);
 		String fieldName = comp.getFieldName();
-		if ((name != null) && ((name.length() == 0) || (isDefaultName(name)))) {
-			name = null;
-		}
-		if (name == null) {
-			if (fieldName == null) {
-				return false;
+		if (name != null) {
+			name = name.trim();
+			if (name.length() == 0 || isDefaultName(name)) {
+				name = null;
 			}
 		}
-		else if (name.equals(fieldName)) {
+		if (SystemUtilities.isEqual(name, fieldName)) {
 			return false;
 		}
+
 		DataType dt = comp.getDataType();
 		int length = comp.getLength();
 		String comment = comp.getComment();
@@ -433,6 +447,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Sets the comment at the specified ordinal.
+	 * 
 	 * @param ordinal the ordinal
 	 * @param comment the new comment.
 	 */
@@ -483,6 +498,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Currently no validation is done on the name.
+	 * 
 	 * @param ordinal
 	 * @param newName
 	 * @throws InvalidNameException
@@ -509,8 +525,9 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 	/**
-	 * Effectively moves a component for a defined stack variable if it will fit
-	 * where it is being moved to in the stack frame.
+	 * Effectively moves a component for a defined stack variable if it will fit where it is being
+	 * moved to in the stack frame.
+	 * 
 	 * @param ordinal the ordinal of the component to move by changing its offset.
 	 * @param newOffset the offset to move the variable to.
 	 * @return the component representing the stack variable at the new offset.
@@ -523,8 +540,8 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (newOffset == oldOffset) {
 			return comp;
 		}
-		if ((oldOffset >= splitOffset) && (newOffset < splitOffset) || (oldOffset < splitOffset) &&
-			(newOffset >= splitOffset)) {
+		if ((oldOffset >= splitOffset) && (newOffset < splitOffset) ||
+			(oldOffset < splitOffset) && (newOffset >= splitOffset)) {
 			throw new InvalidInputException(
 				"Cannot move a stack variable/parameter across the parameter offset.");
 		}
@@ -548,17 +565,17 @@ public class StackFrameDataType extends BiDirectionDataType {
 		String defaultName = getDefaultName(comp);
 		String oldName = comp.getFieldName();
 		boolean isDefault = (oldName == null) || (oldName.equals(defaultName));
-		DataTypeComponent newComp =
-			replaceAtOffset(newOffset, comp.getDataType(), comp.getLength(), isDefault ? null
-					: oldName, comp.getComment());
+		DataTypeComponent newComp = replaceAtOffset(newOffset, comp.getDataType(), comp.getLength(),
+			isDefault ? null : oldName, comp.getComment());
 		return newComp;
 	}
 
 	/**
-	 * Sets a component representing the defined stack variable at the indicated 
-	 * ordinal to have the specified data type and length.
+	 * Sets a component representing the defined stack variable at the indicated ordinal to have the
+	 * specified data type and length.
+	 * 
 	 * @param ordinal the ordinal
-	 * @param type	the data type
+	 * @param type the data type
 	 * @param length the length or size of this variable.
 	 * @return the component representing this stack variable.
 	 */
@@ -569,6 +586,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Get the maximum variable size that will fit at the indicated offset if a replace is done.
+	 * 
 	 * @param offset
 	 * @return the maximum size
 	 */
@@ -578,7 +596,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		}
 
 		int nextOffset = offset;
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			index++;
 		}
@@ -604,6 +622,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Returns the default name for the indicated stack offset.
+	 * 
 	 * @param offset
 	 * @return the default stack variable name.
 	 */
@@ -623,9 +642,8 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * @param element
-	 * @return the index number for this parameter
-	 * (starting at 1 for the first parameter.)
-	 * 0 if the element is not a parameter.
+	 * @return the index number for this parameter (starting at 1 for the first parameter.) 0 if the
+	 *         element is not a parameter.
 	 */
 	private int getParameterIndex(DataTypeComponent element) {
 		int numComps = components.size();
@@ -668,6 +686,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 
 	/**
 	 * Returns true if a stack variable is defined at the specified ordinal.
+	 * 
 	 * @param ordinal
 	 * @return true if variable is defined at ordinal or false if undefined.
 	 */
@@ -675,7 +694,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (ordinal < 0 || ordinal >= getNumComponents()) {
 			return false;
 		}
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index >= 0) {
 			return true;
 		}
