@@ -36,9 +36,8 @@ public class FunctionMatchSet extends ArrayList<SubroutineMatch> {
 	private final SymbolTable bSymbolTable;
 
 	/**
-	 * @param thisProgramName Name of this program (i.e. the program from
-	 * which the matching was initiated.
-	 * @param otherProgramName Name of the program being matched.
+	 * @param aProgram The program from which the matching was initiated.
+	 * @param bProgram The program being matched.
 	 */
 	public FunctionMatchSet(Program aProgram, Program bProgram) {
 		super();
@@ -65,11 +64,11 @@ public class FunctionMatchSet extends ArrayList<SubroutineMatch> {
 //		Address aAddr = m.getAAddresses()[0];
 //		a[0] = aAddr;
 //		a[1] = aSymbolTable.getPrimarySymbol( aAddr );
-//		a[2] = new Integer( getLength( aAddr, aModel ));
+//		a[2] = Integer.valueOf( getLength( aAddr, aModel ));
 //		Address bAddr = m.getBAddresses()[0];
 //		a[3] = bAddr;
 //		a[4] = bSymbolTable.getPrimarySymbol( bAddr );
-//		a[5] = new Integer( getLength( bAddr, bModel ) );
+//		a[5] = Integer.valueOf( getLength( bAddr, bModel ) );
 //		a[6] = m.getReason();
 //		return a;
 //	}
