@@ -17,27 +17,26 @@ package ghidra.app.util.opinion;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.util.List;
+import java.util.TreeSet;
 
 import ghidra.app.util.MemoryBlockUtils;
-import ghidra.app.util.bin.BinaryReader;
 import ghidra.app.util.bin.ByteProvider;
-import ghidra.app.util.bin.format.macho.MachException;
-import ghidra.app.util.bin.format.macho.MachHeader;
-import ghidra.app.util.bin.format.macho.commands.NList;
+import ghidra.app.util.bin.format.macho.*;
+import ghidra.app.util.bin.format.macho.commands.*;
 import ghidra.app.util.bin.format.macho.dyld.*;
 import ghidra.app.util.importer.MessageLog;
-import ghidra.app.util.importer.MessageLogContinuesFactory;
+import ghidra.app.util.opinion.DyldCacheUtils.SplitDyldCache;
 import ghidra.program.database.mem.FileBytes;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.address.AddressSpace;
-import ghidra.program.model.data.Pointer64DataType;
 import ghidra.program.model.listing.*;
 import ghidra.program.model.mem.MemoryAccessException;
+import ghidra.program.model.mem.MemoryBlock;
 import ghidra.program.model.symbol.SourceType;
 import ghidra.program.model.symbol.SymbolUtilities;
-import ghidra.program.model.util.CodeUnitInsertionException;
 import ghidra.util.exception.CancelledException;
+import ghidra.util.exception.DuplicateNameException;
 import ghidra.util.task.TaskMonitor;
 
 /**
@@ -45,37 +44,23 @@ import ghidra.util.task.TaskMonitor;
  */
 public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 
-	private static final int DATA_PAGE_MAP_ENTRY = 1;
-	private static final int BYTES_PER_CHAIN_OFFSET = 4;
-	private static final int CHAIN_OFFSET_MASK = 0x3fff;
-	private static final int DYLD_CACHE_SLIDE_PAGE_ATTR_NO_REBASE = 0x4000;
-	private static final int DYLD_CACHE_SLIDE_PAGE_ATTR_EXTRA = 0x8000;
-
-	protected DyldCacheHeader dyldCacheHeader;
-	private boolean shouldProcessSymbols;
-	private boolean shouldCreateDylibSections;
-	private boolean shouldAddRelocationEntries;
+	private DyldCacheOptions options;
 
 	/**
 	 * Creates a new {@link DyldCacheProgramBuilder} based on the given information.
 	 * 
 	 * @param program The {@link Program} to build up
 	 * @param provider The {@link ByteProvider} that contains the DYLD Cache bytes
-	 * @param fileBytes Where the Mach-O's bytes came from
-	 * @param shouldProcessSymbols True if symbols should be processed; otherwise, false
-	 * @param shouldCreateDylibSections True if memory blocks should be created for DYLIB sections; 
-	 *   otherwise, false
-	 * @param shouldAddRelocationEntries True to create a relocation entry for each fixed up pointer in pointer chain
+	 * @param fileBytes Where the DYLD Cache's bytes came from
+	 * @param options Options from the {@link DyldCacheLoader}
 	 * @param log The log
 	 * @param monitor A cancelable task monitor
 	 */
 	protected DyldCacheProgramBuilder(Program program, ByteProvider provider, FileBytes fileBytes,
-			boolean shouldProcessSymbols, boolean shouldCreateDylibSections,
-			boolean shouldAddRelocationEntries, MessageLog log, TaskMonitor monitor) {
+			DyldCacheOptions options, MessageLog log,
+			TaskMonitor monitor) {
 		super(program, provider, fileBytes, log, monitor);
-		this.shouldProcessSymbols = shouldProcessSymbols;
-		this.shouldCreateDylibSections = shouldCreateDylibSections;
-		this.shouldAddRelocationEntries = shouldAddRelocationEntries;
+		this.options = options;
 	}
 
 	/**
@@ -84,48 +69,66 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 	 * @param program The {@link Program} to build up
 	 * @param provider The {@link ByteProvider} that contains the DYLD Cache's bytes
 	 * @param fileBytes Where the Mach-O's bytes came from
-	 * @param shouldProcessSymbols True if symbols should be processed; otherwise, false
-	 * @param shouldCreateDylibSections True if memory blocks should be created for DYLIB sections; 
-	 *   otherwise, false
-	 * @param addRelocationEntries True to create a relocation entry for each fixed up pointer in pointer chain
+	 * @param options Options from the {@link DyldCacheLoader}
 	 * @param log The log
 	 * @param monitor A cancelable task monitor
 	 * @throws Exception if a problem occurs
 	 */
 	public static void buildProgram(Program program, ByteProvider provider, FileBytes fileBytes,
-			boolean shouldProcessSymbols, boolean shouldCreateDylibSections,
-			boolean addRelocationEntries, MessageLog log, TaskMonitor monitor) throws Exception {
-		DyldCacheProgramBuilder dyldCacheProgramBuilder =
-			new DyldCacheProgramBuilder(program, provider, fileBytes, shouldProcessSymbols,
-				shouldCreateDylibSections, addRelocationEntries, log, monitor);
+			DyldCacheOptions options, MessageLog log, TaskMonitor monitor) throws Exception {
+		DyldCacheProgramBuilder dyldCacheProgramBuilder = new DyldCacheProgramBuilder(program,
+			provider, fileBytes, options, log, monitor);
 		dyldCacheProgramBuilder.build();
 	}
 
 	@Override
 	protected void build() throws Exception {
 
-		monitor.setMessage("Parsing DYLD Cache header ...");
-		monitor.initialize(1);
-		dyldCacheHeader = new DyldCacheHeader(new BinaryReader(provider, true));
-		dyldCacheHeader.parseFromFile(shouldProcessSymbols, log, monitor);
-		monitor.incrementProgress(1);
+		try (SplitDyldCache splitDyldCache =
+			new SplitDyldCache(provider, options.processLocalSymbols(), log, monitor)) {
 
-		setDyldCacheImageBase();
-		processDyldCacheMemoryBlocks();
-		fixPageChains();
-		markupHeaders();
-		markupBranchIslands();
-		createSymbols();
+			// Set image base
+			setDyldCacheImageBase(splitDyldCache.getDyldCacheHeader(0));
 
-		processDylibs();
+			// Set entry point
+			setDyldCacheEntryPoint(splitDyldCache.getDyldCacheHeader(0));
+
+			// Setup memory
+			// Check if local symbols are present
+			boolean localSymbolsPresent = false;
+			for (int i = 0; i < splitDyldCache.size(); i++) {
+				DyldCacheHeader header = splitDyldCache.getDyldCacheHeader(i);
+				ByteProvider bp = splitDyldCache.getProvider(i);
+				String name = splitDyldCache.getName(i);
+
+				processDyldCacheMemoryBlocks(header, name, bp);
+				
+				if (header.getLocalSymbolsInfo() != null) {
+					localSymbolsPresent = true;
+				}
+			}
+
+			// Perform additional DYLD processing
+			for (int i = 0; i < splitDyldCache.size(); i++) {
+				DyldCacheHeader header = splitDyldCache.getDyldCacheHeader(i);
+				ByteProvider bp = splitDyldCache.getProvider(i);
+
+				fixupSlidePointers(header);
+				markupHeaders(header);
+				markupBranchIslands(header, bp);
+				createLocalSymbols(header);
+				processDylibs(splitDyldCache, header, bp, localSymbolsPresent);
+			}
+		}
 	}
 
 	/**
 	 * Sets the program's image base.
 	 * 
+	 * @param dyldCacheHeader The "base" DYLD Cache header
 	 * @throws Exception if there was problem setting the program's image base
 	 */
-	private void setDyldCacheImageBase() throws Exception {
+	private void setDyldCacheImageBase(DyldCacheHeader dyldCacheHeader) throws Exception {
 		monitor.setMessage("Setting image base...");
 		monitor.initialize(1);
 		program.setImageBase(space.getAddress(dyldCacheHeader.getBaseAddress()), true);
@@ -133,239 +136,169 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 	}
 
 	/**
+	 * Sets the program's entry point (if known).
+	 * 
+	 * @param dyldCacheHeader The "base" DYLD Cache header
+	 * @throws Exception if there was problem setting the program's entry point
+	 */
+	private void setDyldCacheEntryPoint(DyldCacheHeader dyldCacheHeader) throws Exception {
+		monitor.initialize(1, "Setting entry pointer base...");
+		Long entryPoint = dyldCacheHeader.getEntryPoint();
+		if (entryPoint != null) {
+			Address entryPointAddr = space.getAddress(entryPoint);
+			program.getSymbolTable().addExternalEntryPoint(entryPointAddr);
+			createOneByteFunction("entry", entryPointAddr);
+		}
+		else {
+			log.appendMsg("Unable to determine entry point.");
+		}
+		monitor.incrementProgress(1);
+	}
+
+	/**
 	 * Processes the DYLD Cache's memory mappings and creates memory blocks for them.
 	 * 
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
+	 * @param name The name of the DYLD Cache
+	 * @param bp The corresponding {@link ByteProvider}
 	 * @throws Exception if there was a problem creating the memory blocks
 	 */
-	private void processDyldCacheMemoryBlocks() throws Exception {
+	private void processDyldCacheMemoryBlocks(DyldCacheHeader dyldCacheHeader, String name,
+			ByteProvider bp) throws Exception {
 		List<DyldCacheMappingInfo> mappingInfos = dyldCacheHeader.getMappingInfos();
-
 		monitor.setMessage("Processing DYLD mapped memory blocks...");
 		monitor.initialize(mappingInfos.size());
+		String extension = name.contains(".") ? name.substring(name.indexOf(".")) : "";
+		FileBytes fb = MemoryBlockUtils.createFileBytes(program, bp, monitor);
 		long endOfMappedOffset = 0;
+		boolean bookmarkSet = false;
 		for (DyldCacheMappingInfo mappingInfo : mappingInfos) {
 			long offset = mappingInfo.getFileOffset();
 			long size = mappingInfo.getSize();
-			MemoryBlockUtils.createInitializedBlock(program, false, "DYLD",
-				space.getAddress(mappingInfo.getAddress()), fileBytes, offset, size, "", "",
-				mappingInfo.isRead(), mappingInfo.isWrite(), mappingInfo.isExecute(), log);
+			MemoryBlock block = MemoryBlockUtils.createInitializedBlock(program, false,
+				"DYLD" + extension, space.getAddress(mappingInfo.getAddress()), fb, offset, size,
+				"", "", mappingInfo.isRead(), mappingInfo.isWrite(), mappingInfo.isExecute(), log);
+
 			if (offset + size > endOfMappedOffset) {
 				endOfMappedOffset = offset + size;
 			}
-			monitor.checkCanceled();
+
+			if (!bookmarkSet) {
+				program.getBookmarkManager()
+						.setBookmark(block.getStart(), BookmarkType.INFO, "Dyld Cache Header",
+							name + " - " + dyldCacheHeader.getUUID());
+				bookmarkSet = true;
+			}
+
+			monitor.checkCancelled();
 			monitor.incrementProgress(1);
 		}
 
-		if (endOfMappedOffset < provider.length()) {
+		if (endOfMappedOffset < bp.length()) {
 			monitor.setMessage("Processing DYLD unmapped memory block...");
-			MemoryBlockUtils.createInitializedBlock(program, true, "FILE",
-				AddressSpace.OTHER_SPACE.getAddress(endOfMappedOffset), fileBytes,
-				endOfMappedOffset, provider.length() - endOfMappedOffset,
-				"Useful bytes that don't get mapped into memory", "", false, false, false, log);
+			MemoryBlock fileBlock =
+				MemoryBlockUtils.createInitializedBlock(program, true, "FILE" + extension,
+				AddressSpace.OTHER_SPACE.getAddress(endOfMappedOffset), fb, endOfMappedOffset,
+				bp.length() - endOfMappedOffset, "Useful bytes that don't get mapped into memory",
+				"", false, false, false, log);
+			dyldCacheHeader.setFileBlock(fileBlock);
 		}
 	}
 
 	/**
 	 * Marks up the DYLD Cache headers.
 	 * 
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
 	 * @throws Exception if there was a problem marking up the headers
 	 */
-	private void markupHeaders() throws Exception {
+	private void markupHeaders(DyldCacheHeader dyldCacheHeader) throws Exception {
 		monitor.setMessage("Marking up DYLD headers...");
 		monitor.initialize(1);
 		dyldCacheHeader.parseFromMemory(program, space, log, monitor);
-		dyldCacheHeader.markup(program, space, monitor, log);
+		dyldCacheHeader.markup(program, options.markupLocalSymbols(), space, monitor, log);
 		monitor.incrementProgress(1);
 	}
 
 	/**
 	 * Marks up the DYLD Cache branch islands.
 	 * 
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
+	 * @param bp The corresponding {@link ByteProvider}
 	 * @throws Exception if there was a problem marking up the branch islands.
 	 */
-	private void markupBranchIslands() throws Exception {
+	private void markupBranchIslands(DyldCacheHeader dyldCacheHeader, ByteProvider bp)
+			throws Exception {
 		monitor.setMessage("Marking up DYLD branch islands...");
 		monitor.initialize(dyldCacheHeader.getBranchPoolAddresses().size());
 		for (Long addr : dyldCacheHeader.getBranchPoolAddresses()) {
 			try {
-				MachHeader header =
-					MachHeader.createMachHeader(MessageLogContinuesFactory.create(log), provider,
-						addr - dyldCacheHeader.getBaseAddress());
+				MachHeader header = new MachHeader(bp, addr - dyldCacheHeader.getBaseAddress());
 				header.parse();
 				super.markupHeaders(header, space.getAddress(addr));
 			}
 			catch (MachException | IOException e) {
 				// Not a show-stopper...carry on.
 			}
-			monitor.checkCanceled();
+			monitor.checkCancelled();
 			monitor.incrementProgress(1);
 		}
 	}
 
 	/**
-	 * Creates the DYLD Cache symbols.
+	 * Create the DYLD Cache local symbols.
 	 * 
-	 * @throws Exception if there was a problem creating the symbols
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
+	 * @throws Exception if there was a problem creating the local symbols
 	 */
-	private void createSymbols() throws Exception {
+	private void createLocalSymbols(DyldCacheHeader dyldCacheHeader) throws Exception {
+		if (!options.processLocalSymbols()) {
+			return;
+		}
 		DyldCacheLocalSymbolsInfo localSymbolsInfo = dyldCacheHeader.getLocalSymbolsInfo();
-		if (localSymbolsInfo != null) {
-			monitor.setMessage("Processing DYLD symbols...");
-			monitor.initialize(localSymbolsInfo.getNList().size());
-			for (NList nlist : localSymbolsInfo.getNList()) {
-				if (!nlist.getString().trim().isEmpty()) {
-					try {
-						program.getSymbolTable().createLabel(space.getAddress(nlist.getValue()),
+		if (localSymbolsInfo == null) {
+			return;
+		}
+		monitor.setMessage("Creating DYLD local symbols...");
+		monitor.initialize(localSymbolsInfo.getNList().size());
+		for (NList nlist : localSymbolsInfo.getNList()) {
+			if (nlist.getString().isBlank()) {
+				continue;
+			}
+			try {
+				program.getSymbolTable()
+						.createLabel(space.getAddress(nlist.getValue()),
 							SymbolUtilities.replaceInvalidChars(nlist.getString(), true),
 							program.getGlobalNamespace(), SourceType.IMPORTED);
-					}
-					catch (Exception e) {
-						log.appendMsg(e.getMessage() + " " + nlist.getString());
-					}
-				}
-				monitor.checkCanceled();
-				monitor.incrementProgress(1);
 			}
+			catch (Exception e) {
+				log.appendMsg(e.getMessage() + " " + nlist.getString());
+			}
+			monitor.checkCancelled();
+			monitor.incrementProgress(1);
 		}
 	}
 
 	/**
-	 * Fixes any chained pointers within each of the data pages.
+	 * Fixes any slide pointers within each of the data pages.
 	 * 
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
 	 * @throws MemoryAccessException if there was a problem reading/writing memory.
 	 * @throws CancelledException if user cancels
 	 */
-	private void fixPageChains() throws MemoryAccessException, CancelledException {
-		long fixedAddressCount = 0;
-
-		// locate slide Info
-		DyldCacheSlideInfoCommon slideInfo = dyldCacheHeader.getSlideInfo();
-		if (slideInfo == null || !(slideInfo instanceof DyldCacheSlideInfo2)) {
-			log.appendMsg(
-				"Can't handle version " + slideInfo.getVersion() + " slide info, only version 2");
+	private void fixupSlidePointers(DyldCacheHeader dyldCacheHeader)
+			throws MemoryAccessException, CancelledException {
+		if (!options.fixupSlidePointers()) {
 			return;
 		}
-		DyldCacheSlideInfo2 slideInfo2 = (DyldCacheSlideInfo2) slideInfo;
 
-		List<DyldCacheMappingInfo> mappingInfos = dyldCacheHeader.getMappingInfos();
-		DyldCacheMappingInfo dyldCacheMappingInfo = mappingInfos.get(DATA_PAGE_MAP_ENTRY);
-		long dataPageStart = dyldCacheMappingInfo.getAddress();
-		long pageSize = slideInfo2.getPageSize();
-		long pageStartsCount = slideInfo2.getPageStartsCount();
+		// locate slide Info
+		List<DyldCacheSlideInfoCommon> slideInfos = dyldCacheHeader.getSlideInfos();
+		for (DyldCacheSlideInfoCommon info : slideInfos) {
+			int version = info.getVersion();
 
-		long deltaMask = slideInfo2.getDeltaMask();
-		long deltaShift = Long.numberOfTrailingZeros(deltaMask);
-		long valueAdd = slideInfo2.getValueAdd();
-
-		short[] pageEntries = slideInfo2.getPageStartsEntries();
-		short[] extraEntries = slideInfo2.getPageExtrasEntries();
-
-		monitor.setMessage("Fixing chained data page pointers...");
-
-		monitor.setMaximum(pageStartsCount);
-		for (int index = 0; index < pageStartsCount; index++) {
-			monitor.checkCanceled();
-
-			long page = dataPageStart + (pageSize * index);
-
-			monitor.setProgress(index);
-
-			int pageEntry = pageEntries[index] & 0xffff;
-			if (pageEntry == DYLD_CACHE_SLIDE_PAGE_ATTR_NO_REBASE) {
-				continue;
-			}
-
-			List<Address> unchainedLocList = new ArrayList<>(1024);
-
-			if ((pageEntry & DYLD_CACHE_SLIDE_PAGE_ATTR_EXTRA) != 0) {
-				// go into extras and process list of chain entries for the same page
-				int extraIndex = (pageEntry & CHAIN_OFFSET_MASK);
-				do {
-					pageEntry = extraEntries[extraIndex] & 0xffff;
-					long pageOffset = (pageEntry & CHAIN_OFFSET_MASK) * BYTES_PER_CHAIN_OFFSET;
-
-					processPointerChain(unchainedLocList, page, pageOffset, deltaMask, deltaShift,
-						valueAdd);
-					extraIndex++;
-				}
-				while ((pageEntry & DYLD_CACHE_SLIDE_PAGE_ATTR_EXTRA) == 0);
-			}
-			else {
-				long pageOffset = pageEntry * BYTES_PER_CHAIN_OFFSET;
-
-				processPointerChain(unchainedLocList, page, pageOffset, deltaMask, deltaShift,
-					valueAdd);
-			}
-
-			fixedAddressCount += unchainedLocList.size();
-			unchainedLocList.forEach(entry -> {
-				// create a pointer at the fixed up chain pointer location
-				try {
-					// don't use data utilities. does too much extra checking work
-					listing.createData(entry, Pointer64DataType.dataType);
-				}
-				catch (CodeUnitInsertionException e) {
-					// No worries, something presumably more important was there already
-				}
-			});
-		}
-
-		log.appendMsg("Fixed " + fixedAddressCount + " chained pointers.  Creating Pointers");
-
-		monitor.setMessage("Created " + fixedAddressCount + " chained pointers");
-	}
-
-	/**
-	 * Fixes up any chained pointers, starting at the given address.
-	 * 
-	 * @param unchainedLocList list of locations that were unchained
-	 * @param page within data pages that has pointers to be unchained
-	 * @param nextOff offset within the page that is the chain start
-	 * @param deltaMask delta offset mask for each value
-	 * @param deltaShift shift needed for the deltaMask to extract the next offset
-	 * @param valueAdd value to be added to each chain pointer
-	 * 
-	 * @throws MemoryAccessException IO problem reading file
-	 * @throws CancelledException user cancels
-	 */
-	private void processPointerChain(List<Address> unchainedLocList, long page, long nextOff,
-			long deltaMask, long deltaShift, long valueAdd)
-			throws MemoryAccessException, CancelledException {
-
-		// TODO: should the image base be used to perform the ASLR slide on the pointers.
-		//        currently image is kept at it's initial location with no ASLR.
-		Address chainStart = memory.getProgram().getLanguage().getDefaultSpace().getAddress(page);
-
-		byte origBytes[] = new byte[8];
-
-		long valueMask = 0xffffffffffffffffL >>> (64 - deltaShift);
-
-		long delta = -1;
-		while (delta != 0) {
-			monitor.checkCanceled();
-
-			Address chainLoc = chainStart.add(nextOff);
-			long chainValue = memory.getLong(chainLoc);
-
-			delta = (chainValue & deltaMask) >> deltaShift;
-			chainValue = chainValue & valueMask;
-			if (chainValue != 0) {
-				chainValue += valueAdd;
-			}
-
-			if (shouldAddRelocationEntries) {
-				// Add entry to relocation table for the pointer fixup
-				memory.getBytes(chainLoc, origBytes);
-				program.getRelocationTable().add(chainLoc, 1, new long[] { chainValue }, origBytes,
-					null);
-			}
-
-			memory.setLong(chainLoc, chainValue);
-
-			// delay creating data until after memory has been changed
-			unchainedLocList.add(chainLoc);
-
-			nextOff += (delta * 4);
+			log.appendMsg("Fixing slide pointers version: " + version);
+			info.fixupSlidePointers(program, options.markupSlidePointers(),
+				options.addSlidePointerRelocations(), log, monitor);
 		}
 	}
 
@@ -373,55 +306,106 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 	 * Processes the DYLD Cache's DYLIB files.  This will mark up the DYLIB files, added them to the
 	 * program tree, and make memory blocks for them.
 	 * 
+	 * @param dyldCacheHeader The {@link DyldCacheHeader}
+	 * @param bp The corresponding {@link ByteProvider}
+	 * @param localSymbolsPresent True if DYLD local symbols are present; otherwise, false
 	 * @throws Exception if there was a problem processing the DYLIB files
 	 */
-	private void processDylibs() throws Exception {
+	private void processDylibs(SplitDyldCache splitDyldCache, DyldCacheHeader dyldCacheHeader,
+			ByteProvider bp, boolean localSymbolsPresent) throws Exception {
 		// Create an "info" object for each DyldCache DYLIB, which will make processing them 
-		// easier
+		// easier.  Save off the "libobjc" DYLIB for additional processing later.
 		monitor.setMessage("Parsing DYLIB's...");
-		monitor.initialize(dyldCacheHeader.getImageInfos().size());
+		DyldCacheMachoInfo libobjcInfo = null;
 		TreeSet<DyldCacheMachoInfo> infoSet =
 			new TreeSet<>((a, b) -> a.headerAddr.compareTo(b.headerAddr));
-		for (DyldCacheImageInfo dyldCacheImageInfo : dyldCacheHeader.getImageInfos()) {
-			infoSet.add(new DyldCacheMachoInfo(provider,
-				dyldCacheImageInfo.getAddress() - dyldCacheHeader.getBaseAddress(),
-				space.getAddress(dyldCacheImageInfo.getAddress()), dyldCacheImageInfo.getPath()));
-			monitor.checkCanceled();
+		List<DyldCacheImage> mappedImages = dyldCacheHeader.getMappedImages();
+		monitor.initialize(mappedImages.size());
+		for (DyldCacheImage mappedImage : mappedImages) {
+			monitor.checkCancelled();
 			monitor.incrementProgress(1);
+			DyldCacheMachoInfo info = new DyldCacheMachoInfo(splitDyldCache, bp,
+				mappedImage.getAddress() - dyldCacheHeader.getBaseAddress(),
+				space.getAddress(mappedImage.getAddress()), mappedImage.getPath());
+			infoSet.add(info);
+			if (libobjcInfo == null && info.name.contains("libobjc.")) {
+				libobjcInfo = info;
+			}
 		}
-
-		// Markup DyldCache Mach-O headers 
+		
+		// Markup DyldCache DYLIB headers 
 		monitor.setMessage("Marking up DYLIB headers...");
 		monitor.initialize(infoSet.size());
 		for (DyldCacheMachoInfo info : infoSet) {
-			info.markupHeaders();
-			monitor.checkCanceled();
+			monitor.checkCancelled();
 			monitor.incrementProgress(1);
+			info.markupHeaders();
 		}
 
 		// Add DyldCache Mach-O's to program tree
 		monitor.setMessage("Adding DYLIB's to program tree...");
 		monitor.initialize(infoSet.size());
-		Iterator<DyldCacheMachoInfo> iter = infoSet.iterator();
-		if (iter.hasNext()) {
-			DyldCacheMachoInfo curr = iter.next();
-			do {
-				DyldCacheMachoInfo next = iter.hasNext() ? iter.next() : null;
-				curr.addToProgramTree(next);
-				curr = next;
-				monitor.checkCanceled();
-				monitor.incrementProgress(1);
-			}
-			while (iter.hasNext());
+		for (DyldCacheMachoInfo info : infoSet) {
+			monitor.checkCancelled();
+			monitor.incrementProgress(1);
+			info.addToProgramTree();
 		}
 
-		// Process DyldCache DYLIB memory blocks.
-		monitor.setMessage("Processing DYLIB memory blocks...");
-		monitor.initialize(infoSet.size());
-		for (DyldCacheMachoInfo info : infoSet) {
-			info.processMemoryBlocks();
-			monitor.checkCanceled();
-			monitor.incrementProgress(1);
+		// Process DyldCache DYLIB memory blocks
+		if (options.processDylibMemory()) {
+			monitor.setMessage("Processing DYLIB memory blocks...");
+			monitor.initialize(infoSet.size());
+			for (DyldCacheMachoInfo info : infoSet) {
+				monitor.checkCancelled();
+				monitor.incrementProgress(1);
+				info.processMemoryBlocks();
+			}
+
+		}
+
+		// Markup DyldCache DYLIB load command data
+		if (options.markupDylibLoadCommandData()) {
+			monitor.setMessage("Marking up DYLIB load command data...");
+			monitor.initialize(infoSet.size());
+			for (DyldCacheMachoInfo info : infoSet) {
+				monitor.checkCancelled();
+				monitor.incrementProgress(1);
+				info.markupLoadCommandData();
+			}
+		}
+
+		// Create DYLIB symbols 
+		if (options.processDylibSymbols()) {
+			monitor.setMessage("Creating DYLIB symbols...");
+			monitor.initialize(infoSet.size());
+			for (DyldCacheMachoInfo info : infoSet) {
+				info.createSymbols(false);
+				monitor.checkCancelled();
+				monitor.incrementProgress(1);
+			}
+		}
+
+		// Create DYLIB Exports
+		if (options.processDylibExports()) {
+			monitor.setMessage("Creating DYLIB exports...");
+			monitor.initialize(infoSet.size());
+			for (DyldCacheMachoInfo info : infoSet) {
+				info.createExports();
+				monitor.checkCancelled();
+				monitor.incrementProgress(1);
+			}
+		}
+
+		// Process and markup the libobjc DYLIB
+		if (options.processLibobjc()) {
+			monitor.setMessage("Processing libobjc...");
+			DyldCacheMachoInfo libObjcInfo =
+				infoSet.stream().filter(e -> e.name.contains("libobjc.")).findAny().orElse(null);
+			if (libObjcInfo != null) {
+				LibObjcDylib libObjcDylib =
+					new LibObjcDylib(libObjcInfo.header, program, space, log, monitor);
+				libObjcDylib.markup();
+			}
 		}
 	}
 
@@ -438,18 +422,17 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 		/**
 		 * Creates a new {@link DyldCacheMachoInfo} object with the given parameters.
 		 * 
+		 * @param splitDyldCache The {@link SplitDyldCache}
 		 * @param provider The {@link ByteProvider} that contains the Mach-O's bytes
 		 * @param offset The offset in the provider to the start of the Mach-O
 		 * @param headerAddr The Mach-O's header address
 		 * @param path The path of the Mach-O
 		 * @throws Exception If there was a problem handling the Mach-O info
 		 */
-		public DyldCacheMachoInfo(ByteProvider provider, long offset, Address headerAddr,
-				String path) throws Exception {
+		public DyldCacheMachoInfo(SplitDyldCache splitDyldCache, ByteProvider provider, long offset, Address headerAddr, String path) throws Exception {
 			this.headerAddr = headerAddr;
-			this.header = MachHeader.createMachHeader(MessageLogContinuesFactory.create(log),
-				provider, offset);
-			this.header.parse();
+			this.header = new MachHeader(provider, offset, false);
+			this.header.parse(splitDyldCache);
 			this.path = path;
 			this.name = new File(path).getName();
 		}
@@ -461,8 +444,28 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 		 * @see DyldCacheProgramBuilder#processMemoryBlocks(MachHeader, String, boolean, boolean)
 		 */
 		public void processMemoryBlocks() throws Exception {
-			DyldCacheProgramBuilder.this.processMemoryBlocks(header, name,
-				shouldCreateDylibSections, false);
+			DyldCacheProgramBuilder.this.processMemoryBlocks(header, name, true, false);
+		}
+		
+		/**
+		 * Creates exports for this Mach-O.
+		 * 
+		 * @return True if exports were created; otherwise, false
+		 * @throws Exception If there was a problem creating exports for this Mach-O
+		 */
+		public boolean createExports() throws Exception {
+			return DyldCacheProgramBuilder.this.processExports(header);
+		}
+		
+		/**
+		 * Creates symbols for this Mach-O (does not include exports).
+		 * 
+		 * @param processExports True if symbol table exports should be processed; otherwise, false
+		 * @throws Exception If there was a problem creating symbols for this Mach-O
+		 * @see DyldCacheProgramBuilder#processSymbolTables(MachHeader, boolean)
+		 */
+		public void createSymbols(boolean processExports) throws Exception {
+			DyldCacheProgramBuilder.this.processSymbolTables(header, processExports);
 		}
 
 		/**
@@ -480,26 +483,68 @@ public class DyldCacheProgramBuilder extends MachoProgramBuilder {
 		}
 
 		/**
-		 * Adds an entry to the program tree for this Mach-O
+		 * Marks up the Mach-O load command data.
 		 * 
-		 * @param next The Mach-O that comes directly after this one.  Could be null if this
-		 *   is the last one.
+		 * @throws Exception If there was a problem marking up the Mach-O's load command data
+		 * @see DyldCacheProgramBuilder#markupLoadCommandData(MachHeader, String)
+		 */
+		public void markupLoadCommandData() throws Exception {
+			DyldCacheProgramBuilder.this.markupLoadCommandData(header, name);
+		}
+
+		/**
+		 * Adds an entry to the program tree for this Mach-O.  An entry consists of a 
+		 * {@link ProgramModule module} named the path of this Mach-O in the DYLD Cache, and
+		 * {@link ProgramFragment fragments} for each of this Mach-O's segments and sections.
+		 * 
 		 * @throws Exception If there was a problem adding this Mach-O to the program tree
 		 */
-		public void addToProgramTree(DyldCacheMachoInfo next) throws Exception {
-			ProgramFragment fragment = listing.getDefaultRootModule().createFragment(path);
-			if (next != null) {
-				fragment.move(headerAddr, next.headerAddr.subtract(1));
+		public void addToProgramTree() throws Exception {
+			ProgramModule module;
+			try {
+				module = listing.getDefaultRootModule().createModule(path);
 			}
-			else {
-				// This is the last Mach-O, so we'll assume it ends where the mapping that contains 
-				// it ends.
-				for (DyldCacheMappingInfo mappingInfo : dyldCacheHeader.getMappingInfos()) {
-					Address mappingAddr = space.getAddress(mappingInfo.getAddress());
-					if (headerAddr.compareTo(mappingAddr) >= 0 &&
-						headerAddr.compareTo(mappingAddr.add(mappingInfo.getSize() - 1)) <= 0) {
-						fragment.move(headerAddr, mappingAddr.add(mappingInfo.getSize() - 1));
+			catch (DuplicateNameException e) {
+				log.appendMsg("Failed to add duplicate module to program tree: " + path);
+				return;
+			}
+
+			// Add the segments, because things like the header are not included in any section
+			for (SegmentCommand segment : header.getAllSegments()) {
+				if (segment.getVMsize() == 0) {
+					continue;
+				}
+				if (segment.getSegmentName().equals(SegmentNames.SEG_LINKEDIT)) {
+					continue; // __LINKEDIT segment is shared across all modules
+				}
+				Address segmentStart = space.getAddress(segment.getVMaddress());
+				Address segmentEnd = segmentStart.add(segment.getVMsize() - 1);
+				if (!memory.contains(segmentEnd)) {
+					segmentEnd = memory.getBlock(segmentStart).getEnd();
+				}
+				ProgramFragment segmentFragment =
+					module.createFragment(String.format("%s - %s", segment.getSegmentName(), path));
+				segmentFragment.move(segmentStart, segmentEnd);
+
+				// Add the sections, which will remove overlapped ranges from the segment fragment
+				for (Section section : segment.getSections()) {
+					if (section.getSize() == 0) {
+						continue;
 					}
+					Address sectionStart = space.getAddress(section.getAddress());
+					Address sectionEnd = sectionStart.add(section.getSize() - 1);
+					if (!memory.contains(sectionEnd)) {
+						sectionEnd = memory.getBlock(sectionStart).getEnd();
+					}
+					ProgramFragment sectionFragment =
+						module.createFragment(String.format("%s %s - %s", section.getSegmentName(),
+							section.getSectionName(), path));
+					sectionFragment.move(sectionStart, sectionEnd);
+				}
+
+				// If the sections fully filled the segment, we can remove the now-empty segment
+				if (segmentFragment.isEmpty()) {
+					module.removeChild(segmentFragment.getName());
 				}
 			}
 		}
