@@ -24,17 +24,19 @@ import java.util.List;
 
 import javax.swing.JComponent;
 
+import docking.action.ToggleDockingAction;
+import generic.theme.*;
 import ghidra.GhidraOptions;
 import ghidra.GhidraOptions.CURSOR_MOUSE_BUTTON_NAMES;
 import ghidra.app.plugin.core.format.*;
 import ghidra.app.services.MarkerService;
+import ghidra.app.util.viewer.listingpanel.AddressSetDisplayListener;
 import ghidra.framework.options.*;
 import ghidra.framework.plugintool.ComponentProviderAdapter;
 import ghidra.framework.plugintool.PluginTool;
 import ghidra.util.*;
 import ghidra.util.classfinder.ClassSearcher;
 import ghidra.util.task.SwingUpdateManager;
-import resources.ResourceManager;
 
 public abstract class ByteViewerComponentProvider extends ComponentProviderAdapter
 		implements OptionsChangeListener {
@@ -51,35 +53,39 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	private static final String OFFSET_NAME = "Offset";
 	static final int DEFAULT_NUMBER_OF_CHARS = 8;
 
-	static final Font DEFAULT_FONT = new Font("Monospaced", Font.PLAIN, 12);
+	static final String DEFAULT_FONT_ID = "font.byteviewer";
 	static final int DEFAULT_BYTES_PER_LINE = 16;
-	static final Color DEFAULT_MISSING_VALUE_COLOR = Color.blue;
-	static final Color DEFAULT_EDIT_COLOR = Color.red;
-	static final Color DEFAULT_CURRENT_CURSOR_COLOR = Color.magenta.brighter();
-	static final Color DEFAULT_CURSOR_COLOR = Color.black;
-	static final Color DEFAULT_NONFOCUS_CURSOR_COLOR = Color.darkGray;
-	private static final Color DEFAULT_CURSOR_LINE_COLOR = GhidraOptions.DEFAULT_CURSOR_LINE_COLOR;
+
+	//@formatter:off
+	static final String FG = "byteviewer.color.fg";
+	static final String CURSOR = "byteviewer.color.cursor";
+	
+	static final GColor SEPARATOR_COLOR = new GColor("color.fg.byteviewer.separator"); 
+	static final GColor CHANGED_VALUE_COLOR = new GColor("color.fg.byteviewer.changed");
+	static final GColor CURSOR_ACTIVE_COLOR = new GColor("color.cursor.byteviewer.focused.active");
+	static final GColor CURSOR_NON_ACTIVE_COLOR = new GColor("color.cursor.byteviewer.focused.not.active");
+	static final GColor CURSOR_NOT_FOCUSED_COLOR = new GColor("color.cursor.byteviewer.unfocused");
+	
+	static final GColor CURRENT_LINE_COLOR = GhidraOptions.DEFAULT_CURSOR_LINE_COLOR;
+	//@formatter:on
 
 	static final String DEFAULT_INDEX_NAME = "Addresses";
 
-	static final String OPTION_EDIT_COLOR = "Edit Cursor Color";
-	static final String OPTION_SEPARATOR_COLOR = "Block Separator Color";
-	static final String OPTION_CURRENT_VIEW_CURSOR_COLOR = "Current View Cursor Color";
-	static final String OPTION_CURSOR_COLOR = "Cursor Color";
+	static final String SEPARATOR_COLOR_OPTION_NAME = "Block Separator Color";
+	static final String CHANGED_VALUE_COLOR_OPTION_NAME = "Changed Values Color";
+	static final String CURSOR_ACTIVE_COLOR_OPTION_NAME = "Active Cursor Color";
+	static final String CURSOR_NON_ACTIVE_COLOR_OPTION_NAME = "Non-Active Cursor Color";
+	static final String CURSOR_NOT_FOCUSED_COLOR_OPTION_NAME = "Non-Focused Cursor Color";
+
 	static final String OPTION_FONT = "Font";
-	static final String OPTION_NONFOCUS_CURSOR_COLOR = "Non-Focus Cursor Color";
 
 	private static final String DEFAULT_VIEW = "Hex";
-	private static final String OPTION_CURRENT_LINE_COLOR =
+	private static final String CURRENT_LINE_COLOR_OPTION_NAME =
 		GhidraOptions.HIGHLIGHT_CURSOR_LINE_COLOR_OPTION_NAME;
 	private static final String OPTION_HIGHLIGHT_CURSOR_LINE =
 		GhidraOptions.HIGHLIGHT_CURSOR_LINE_OPTION_NAME;
 
 	protected ByteViewerPanel panel;
-
-	private Color editColor;
-	private Color currentCursorColor;
-	private Color defaultCursorColor;
 
 	private int bytesPerLine;
 	private int offset;
@@ -87,27 +93,28 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	protected Map<String, ByteViewerComponent> viewMap = new HashMap<>();
 
-	private ToggleEditAction editModeAction;
+	protected ToggleDockingAction editModeAction;
 	protected OptionsAction setOptionsAction;
 
 	protected ProgramByteBlockSet blockSet;
 
-	protected final ByteViewerPlugin plugin;
+	protected final AbstractByteViewerPlugin<?> plugin;
 
 	protected SwingUpdateManager updateManager;
 
 	private Map<String, Class<? extends DataFormatModel>> dataFormatModelClassMap;
 
-	protected ByteViewerComponentProvider(PluginTool tool, ByteViewerPlugin plugin, String name,
-			Class<?> contextType) {
+	protected ByteViewerComponentProvider(PluginTool tool, AbstractByteViewerPlugin<?> plugin,
+			String name, Class<?> contextType) {
 		super(tool, name, plugin.getName(), contextType);
 		this.plugin = plugin;
+		registerAdjustableFontId(DEFAULT_FONT_ID);
 
 		initializedDataFormatModelClassMap();
 
-		panel = new ByteViewerPanel(this);
+		panel = newByteViewerPanel();
 		bytesPerLine = DEFAULT_BYTES_PER_LINE;
-		setIcon(ResourceManager.loadImage("images/binaryData.gif"));
+		setIcon(new GIcon("icon.plugin.byteviewer.provider"));
 		setOptions();
 
 		createActions();
@@ -116,6 +123,10 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 		addView(DEFAULT_VIEW);
 		setWindowMenuGroup("Byte Viewer");
+	}
+
+	protected ByteViewerPanel newByteViewerPanel() {
+		return new ByteViewerPanel(this);
 	}
 
 	private void initializedDataFormatModelClassMap() {
@@ -150,8 +161,8 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	/**
 	 * Notification that an option changed.
+	 * 
 	 * @param options options object containing the property that changed
-	 * @param group
 	 * @param optionName name of option that changed
 	 * @param oldValue old value of the option
 	 * @param newValue new value of the option
@@ -160,26 +171,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	public void optionsChanged(ToolOptions options, String optionName, Object oldValue,
 			Object newValue) {
 		if (options.getName().equals("ByteViewer")) {
-
-			if (optionName.equals(OPTION_CURRENT_VIEW_CURSOR_COLOR)) {
-				panel.setCurrentCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_CURSOR_COLOR)) {
-				panel.setCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_CURRENT_LINE_COLOR)) {
-				panel.setCurrentCursorLineColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_EDIT_COLOR)) {
-				panel.setEditColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_SEPARATOR_COLOR)) {
-				panel.setSeparatorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_NONFOCUS_CURSOR_COLOR)) {
-				panel.setNonFocusCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_FONT)) {
+			if (optionName.equals(OPTION_FONT)) {
 				setFont(SystemUtilities.adjustForFontSizeOverride((Font) newValue));
 			}
 		}
@@ -206,48 +198,45 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		HelpLocation help = new HelpLocation("ByteViewerPlugin", "Option");
 		opt.setOptionsHelpLocation(help);
 
-		opt.registerOption(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR, help,
+		opt.registerThemeColorBinding(SEPARATOR_COLOR_OPTION_NAME, SEPARATOR_COLOR.getId(), help,
 			"Color used for separator shown between memory blocks.");
-		opt.registerOption(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR, help,
-			"Color used for separator shown between memory blocks.");
-		opt.registerOption(OPTION_EDIT_COLOR, DEFAULT_EDIT_COLOR,
+
+		opt.registerThemeColorBinding(CHANGED_VALUE_COLOR_OPTION_NAME, CHANGED_VALUE_COLOR.getId(),
 			new HelpLocation("ByteViewerPlugin", "EditColor"),
-			"Color of cursor when the current view is in edit mode and can support editing.");
-		opt.registerOption(OPTION_CURRENT_VIEW_CURSOR_COLOR, DEFAULT_CURRENT_CURSOR_COLOR, help,
-			"Color of cursor when it is in the current view.");
-		opt.registerOption(OPTION_NONFOCUS_CURSOR_COLOR, DEFAULT_NONFOCUS_CURSOR_COLOR, help,
-			"Color of cursor when it is not the current view.");
-		opt.registerOption(OPTION_CURSOR_COLOR, DEFAULT_CURSOR_COLOR, help,
-			"Color of cursor for other views other than the current view.");
-		opt.registerOption(OPTION_FONT, DEFAULT_FONT, help, "Font used in the views.");
-		opt.registerOption(OPTION_CURRENT_LINE_COLOR, DEFAULT_CURSOR_LINE_COLOR, help,
+			"Color of changed bytes when editing.");
+
+		opt.registerThemeColorBinding(CURSOR_ACTIVE_COLOR_OPTION_NAME, CURSOR_ACTIVE_COLOR.getId(),
+			help, "Color of cursor in the active view.");
+
+		opt.registerThemeColorBinding(CURSOR_NON_ACTIVE_COLOR_OPTION_NAME,
+			CURSOR_NON_ACTIVE_COLOR.getId(),
+			help, "Color of cursor in the non-active views.");
+
+		opt.registerThemeColorBinding(CURSOR_NOT_FOCUSED_COLOR_OPTION_NAME,
+			CURSOR_NOT_FOCUSED_COLOR.getId(),
+			help, "Color of cursor when the byteview does not have focus.");
+
+		opt.registerThemeColorBinding(CURRENT_LINE_COLOR_OPTION_NAME,
+			GhidraOptions.DEFAULT_CURSOR_LINE_COLOR.getId(), help,
 			"Color of the line containing the cursor");
+
+		opt.registerThemeFontBinding(OPTION_FONT, DEFAULT_FONT_ID, help,
+			"Font used in the views.");
 		opt.registerOption(OPTION_HIGHLIGHT_CURSOR_LINE, true, help,
 			"Toggles highlighting background color of line containing the cursor");
 
-		Color missingValueColor = opt.getColor(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR);
-		panel.setSeparatorColor(missingValueColor);
+		Color separatorColor = opt.getColor(SEPARATOR_COLOR_OPTION_NAME, SEPARATOR_COLOR);
+		panel.setSeparatorColor(separatorColor);
 
-		editColor = opt.getColor(OPTION_EDIT_COLOR, DEFAULT_EDIT_COLOR);
-		currentCursorColor =
-			opt.getColor(OPTION_CURRENT_VIEW_CURSOR_COLOR, DEFAULT_CURRENT_CURSOR_COLOR);
-		panel.setCurrentCursorColor(currentCursorColor);
+		panel.setCurrentCursorColor(CURSOR_ACTIVE_COLOR);
+		panel.setNonFocusCursorColor(CURSOR_NOT_FOCUSED_COLOR);
+		panel.setCursorColor(CURSOR_NON_ACTIVE_COLOR);
+		panel.setCurrentCursorLineColor(CURRENT_LINE_COLOR);
 
-		Color nonFocusCursorColor =
-			opt.getColor(OPTION_NONFOCUS_CURSOR_COLOR, DEFAULT_NONFOCUS_CURSOR_COLOR);
-		panel.setNonFocusCursorColor(nonFocusCursorColor);
-
-		defaultCursorColor = opt.getColor(OPTION_CURSOR_COLOR, DEFAULT_CURSOR_COLOR);
-		panel.setCursorColor(defaultCursorColor);
-
-		Color cursorLineColor = opt.getColor(OPTION_CURRENT_LINE_COLOR, DEFAULT_CURSOR_LINE_COLOR);
-		panel.setCurrentCursorLineColor(cursorLineColor);
-
-		Font font =
-			SystemUtilities.adjustForFontSizeOverride(opt.getFont(OPTION_FONT, DEFAULT_FONT));
+		Font font = Gui.getFont(DEFAULT_FONT_ID);
 		FontMetrics fm = panel.getFontMetrics(font);
 
-		panel.restoreConfigState(fm, editColor);
+		panel.restoreConfigState(fm, CHANGED_VALUE_COLOR);
 
 		opt.addOptionsChangeListener(this);
 
@@ -257,13 +246,15 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 			CURSOR_HIGHLIGHT_BUTTON_NAME, GhidraOptions.CURSOR_MOUSE_BUTTON_NAMES.MIDDLE);
 		panel.setHighlightButton(mouseButton.getMouseEventID());
 
-		panel.setMouseButtonHighlightColor(opt.getColor(HIGHLIGHT_COLOR_NAME, Color.YELLOW));
+		panel.setMouseButtonHighlightColor(
+			opt.getColor(HIGHLIGHT_COLOR_NAME, DEFAULT_HIGHLIGHT_COLOR));
 
 		opt.addOptionsChangeListener(this);
 	}
 
 	/**
 	 * Set the offset that is applied to each block.
+	 * @param blockOffset the new block offset
 	 */
 	void setBlockOffset(int blockOffset) {
 		if (blockOffset == offset) {
@@ -296,6 +287,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	/**
 	 * Get the number of bytes displayed in a line.
+	 * @return the number of bytes displayed in a line
 	 */
 	int getBytesPerLine() {
 		return bytesPerLine;
@@ -303,13 +295,14 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	/**
 	 * Get the offset that should be applied to each byte block.
+	 * @return the offset that should be applied to each byte block
 	 */
 	int getOffset() {
 		return offset;
 	}
 
 	Color getCursorColor() {
-		return defaultCursorColor;
+		return CURSOR_NON_ACTIVE_COLOR;
 	}
 
 	int getGroupSize() {
@@ -338,7 +331,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		}
 	}
 
-	void writeConfigState(SaveState saveState) {
+	protected void writeConfigState(SaveState saveState) {
 		DataModelInfo info = panel.getDataModelInfo();
 		saveState.putStrings(VIEW_NAMES, info.getNames());
 		saveState.putInt(HEX_VIEW_GROUPSIZE, hexGroupSize);
@@ -346,7 +339,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		saveState.putInt(OFFSET_NAME, offset);
 	}
 
-	void readConfigState(SaveState saveState) {
+	protected void readConfigState(SaveState saveState) {
 		String[] names = saveState.getStrings(VIEW_NAMES, new String[0]);
 		hexGroupSize = saveState.getInt(HEX_VIEW_GROUPSIZE, 1);
 		restoreViews(names, false);
@@ -412,10 +405,10 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	}
 
-	abstract void updateLocation(ByteBlock block, BigInteger blockOffset, int column,
+	protected abstract void updateLocation(ByteBlock block, BigInteger blockOffset, int column,
 			boolean export);
 
-	abstract void updateSelection(ByteBlockSelection selection);
+	protected abstract void updateSelection(ByteBlockSelection selection);
 
 	void dispose() {
 		updateManager.dispose();
@@ -445,7 +438,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	}
 
-	ByteViewerPanel getByteViewerPanel() {
+	protected ByteViewerPanel getByteViewerPanel() {
 		return panel;
 	}
 
@@ -481,7 +474,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 			return null;
 		}
 		try {
-			return classy.newInstance();
+			return classy.getConstructor().newInstance();
 		}
 		catch (Exception e) {
 			// cannot happen, since we only get the value from valid class that we put into the map
@@ -492,5 +485,23 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	public MarkerService getMarkerService() {
 		return tool.getService(MarkerService.class);
+	}
+
+	/**
+	 * Add the {@link AddressSetDisplayListener} to the byte viewer panel
+	 * 
+	 * @param listener the listener to add
+	 */
+	public void addDisplayListener(AddressSetDisplayListener listener) {
+		panel.addDisplayListener(listener);
+	}
+
+	/**
+	 * Remove the {@link AddressSetDisplayListener} from the byte viewer panel
+	 * 
+	 * @param listener the listener to remove
+	 */
+	public void removeDisplayListener(AddressSetDisplayListener listener) {
+		panel.removeDisplayListener(listener);
 	}
 }
